--- a/Cg5i1a.html
+++ b/Cg5i1a.html
@@ -1,22 +1,16 @@
-<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script> 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<script type="text/javascript" src="../functions.js"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script> 			const sP3d10 = [ [ "6", "--S는 아래로 이동" ], [ "5", "--A는 왼쪽으로 이동" ], [ "2", "-이동 방향 입력 받기" ], [ "8", "프로그램 종료" ], [ "7", "--D는 오른쪽으로 이동" ], [ "3", "-이동 결과 출력" ], [ "1", "-먼저 캐릭터의 초기 위치를 출력" ], [ "0", "프로그램시작" ], [ "4", "--W는 위로 이동" ], 							]; 		</script> 	</head> 	<body onload='sP3f3();' oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><ul><li><a href='Cg5i1.html'>코드읽기</a></li><li><a href='Cg5i1a.html'>알고리즘</a></li><li><a href='Cg5i1k.html'>키워드</a></li><li><a href='Cg5i1b.html'>빈칸채우기</a></li><li><a href='Cg5i1s.html'>실행순서</a></li><li><a href='Cg5i1m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/Direction.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>캐릭터가 한 칸 이동해서 방패([), 칼(/), 창(->), 출구(문) 중 하나를 선택하는 문제입니다 이를 해결하는 방법을 아래 참고자료에서 한줄씩 복붙해서 설명하세요 </pre> 				<pre class='selectable'>      / 
-  [   옷   문
-      -> 
-WASD와 [Enter]를 입력하세요: <b><font color='red'>a</font></b>
-      / 
- 옷]       문
-      ->
-</pre><br><pre class='selectable'>      / 
-  [   옷   문
-      -> 
-WASD와 [Enter]를 입력하세요: <b><font color='red'>W</font></b>
-      옷/ 
-  [   옷   문
-      ->
-</pre><br><pre class='selectable'>      / 
-  [   옷   문
-      -> 
-WASD와 [Enter]를 입력하세요: <b><font color='red'>s</font></b>
-      / 
-  [        문
-      옷->
-</pre><br>  	 				<h4>알고리즘</h4> 				<div id="card" style='width:1200px;'> 	  				<div id="cardSlots"></div> 	  				<div id="cardPile"></div> 				</div> 			</div> 		</div> 	</body>  </html>  
+<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script> 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<script type="text/javascript" src="../functions.js"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script> 			const sP3d10 = [ [ "14", "3) -A양이 보이고 B군이 바위를 낸 경우" ], [ "13", "3) -A양이 바위이고 B군이 가위를 낸 경우" ], [ "0", "1) 프로그램 시작" ], [ "6", "1) --셋째 B군이 승리" ], [ "10", "2) -가위바위보 선택 결과를 출력" ], [ "3", "1) -가위바위보 승패 출력" ], [ "5", "1) --둘째 A양이 승리" ], [ "1", "1) -A양 가위바위보 선택" ], [ "11", "3) A양이 승리한 경우 확인 함수" ], [ "4", "1) --첫째 A양과 B군이 비김" ], [ "8", "2) 가위바위보 선택 함수" ], [ "2", "1) -B군 가위바위보 선택" ], [ "9", "2) -사용자가 가위바위보중 하나를 선택" ], [ "7", "1) 프로그램 종료" ], [ "12", "3) -A양이 가위이고 B군이 보를 낸 경우" ], 							]; 		</script> 	</head> 	<body onload='sP3f3();' oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Cf0i/Cf0i0.html'>C 프로그래밍 시작</a></li><li><a href='../Cf1i/Cf1i0.html'>출력</a></li><li><a href='../Cf2i/Cf2i0.html'>입력</a></li><li><a href='../Cf3i/Cf3i0.html'>변수</a></li><li><a href='../Cf4i/Cf4i0.html'>연산자</a></li><li><a href='../Cf5i/Cf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf6i/Cf6i0.html'>선택문(if)</a></li><li><a href='../Cf7i/Cf7i0.html'>반복문(while)</a></li><li><a href='../Cf8i/Cf8i0.html'>반복문(for)</a></li><li><a href='../Cf9i/Cf9i0.html'>배열</a></li><li><a href='../Cg0i/Cg0i0.html'>문자열</a></li><li><a href='../Cg1i/Cg1i0.html'>함수</a></li><li><a href='../Cg2i/Cg2i0.html'>재귀함수</a></li><li><a href='../Cg3i/Cg3i0.html'>포인터</a></li><li><a href='../Cg4i/Cg4i0.html'>파일입출력</a></li><li><a href='../Cg5i/Cg5i0.html'>열거형/구조체/동적할당</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>가위바위보</a></li><ul><li><a href='Cg5i1.html'>코드읽기</a></li><li><a href='Cg5i1a.html'>알고리즘</a></li><li><a href='Cg5i1k.html'>키워드</a></li><li><a href='Cg5i1b.html'>빈칸채우기</a></li><li><a href='Cg5i1s.html'>실행순서</a></li><li><a href='Cg5i1m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/RockPaperScissors.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i2.html'>학생 정보</a></li><li><a href='../Cg5i/Cg5i3.html'>날짜 및 시간</a></li><li><a href='../Cg5i/Cg5i4.html'>캐릭터 키우기</a></li><li><a href='../Cg5i/Cg5i5.html'>우리반 평균 점수</a></li></ul><li><a href='../Cg6i/Cg6i0.html'>함수 자료 전달</a></li><li><a href='../Cg7i/Cg7i0.html'>전처리/파일분할</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>A양과 B군이 가위바위보를 선택하면 승패를 출력하는 문제입니다 이를 해결하는 방법을 아래 참고자료에서 한줄씩 복붙해서 설명하세요 </pre> 				<pre class='selectable'>A양, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>1</span></b>
+가위를 냈습니다.
+B군, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>3</span></b>
+보를 냈습니다.
+A양이 이겼습니다. 
+</pre><br><pre class='selectable'>A양, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>3</span></b>
+보를 냈습니다.
+B군, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>1</span></b>
+가위를 냈습니다.
+B군이 이겼습니다. 
+</pre><br><pre class='selectable'>A양, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>2</span></b>
+바위를 냈습니다.
+B군, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>2</span></b>
+바위를 냈습니다.
+A양과 B군이 비겼습니다. 
+</pre><br>  	 				<h4>알고리즘</h4> 				<div id="card" style='width:1200px;'> 	  				<div id="cardSlots"></div> 	  				<div id="cardPile"></div> 				</div> 				<br><br><br><br><br><br><br><br> &nbsp;  			</div> 		</div> 	</body>  </html>  
