--- a/Cg5i1b.html
+++ b/Cg5i1b.html
@@ -1,61 +1,65 @@
-<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = [ [ "include","#include" ], [ "stdio.h" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "int","short","long" ], [ "\\033","\033" ], [ "switch","switch()" ], [ "case" ], [ "case" ], [ "\\033","\033" ], [ "break","break;" ], [ "case" ], [ "case" ], [ "\\033","\033" ], [ "break","break;" ], [ "case" ], [ "case" ], [ "\\033","\033" ], [ "break","break;" ], [ "case" ], [ "case" ], [ "\\033","\033" ], 							]; 		</script> 	</head> 	<body oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><ul><li><a href='Cg5i1.html'>코드읽기</a></li><li><a href='Cg5i1a.html'>알고리즘</a></li><li><a href='Cg5i1k.html'>키워드</a></li><li><a href='Cg5i1b.html'>빈칸채우기</a></li><li><a href='Cg5i1s.html'>실행순서</a></li><li><a href='Cg5i1m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/Direction.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>캐릭터가 한 칸 이동해서 방패([), 칼(/), 창(->), 출구(문) 중 하나를 선택하는 문제입니다 이를 해결하는 다음 프로그램에 대해 빈칸을 채우세요 </pre> 				<pre class='selectable'>      / 
-  [   옷   문
-      -> 
-WASD와 [Enter]를 입력하세요: <b><font color='red'>a</font></b>
-      / 
- 옷]       문
-      ->
-</pre><br><pre class='selectable'>      / 
-  [   옷   문
-      -> 
-WASD와 [Enter]를 입력하세요: <b><font color='red'>W</font></b>
-      옷/ 
-  [   옷   문
-      ->
-</pre><br><pre class='selectable'>      / 
-  [   옷   문
-      -> 
-WASD와 [Enter]를 입력하세요: <b><font color='red'>s</font></b>
-      / 
-  [        문
-      옷->
-</pre><br>  	  				<h4>코드 빈칸 채우기</h4> 				<pre style='white-space:pre;border:1px'>#<input id='blank0' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(0)'> <<input id='blank1' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(1)'>> 					 
+<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = [ [ "typedef" ], [ "enum" ], [ "typedef" ], [ "enum" ], [ "switch","switch()" ], [ "case" ], [ "break","break;" ], [ "case" ], [ "break","break;" ], [ "case" ], [ "return","return;" ], [ "==" ], [ "==" ], [ "==" ], [ "==" ], [ "==" ], [ "==" ], [ "?" ], [ "return","return;" ], 							]; 		</script> 	</head> 	<body oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Cf0i/Cf0i0.html'>C 프로그래밍 시작</a></li><li><a href='../Cf1i/Cf1i0.html'>출력</a></li><li><a href='../Cf2i/Cf2i0.html'>입력</a></li><li><a href='../Cf3i/Cf3i0.html'>변수</a></li><li><a href='../Cf4i/Cf4i0.html'>연산자</a></li><li><a href='../Cf5i/Cf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf6i/Cf6i0.html'>선택문(if)</a></li><li><a href='../Cf7i/Cf7i0.html'>반복문(while)</a></li><li><a href='../Cf8i/Cf8i0.html'>반복문(for)</a></li><li><a href='../Cf9i/Cf9i0.html'>배열</a></li><li><a href='../Cg0i/Cg0i0.html'>문자열</a></li><li><a href='../Cg1i/Cg1i0.html'>함수</a></li><li><a href='../Cg2i/Cg2i0.html'>재귀함수</a></li><li><a href='../Cg3i/Cg3i0.html'>포인터</a></li><li><a href='../Cg4i/Cg4i0.html'>파일입출력</a></li><li><a href='../Cg5i/Cg5i0.html'>열거형/구조체/동적할당</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>가위바위보</a></li><ul><li><a href='Cg5i1.html'>코드읽기</a></li><li><a href='Cg5i1a.html'>알고리즘</a></li><li><a href='Cg5i1k.html'>키워드</a></li><li><a href='Cg5i1b.html'>빈칸채우기</a></li><li><a href='Cg5i1s.html'>실행순서</a></li><li><a href='Cg5i1m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/RockPaperScissors.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i2.html'>학생 정보</a></li><li><a href='../Cg5i/Cg5i3.html'>날짜 및 시간</a></li><li><a href='../Cg5i/Cg5i4.html'>캐릭터 키우기</a></li><li><a href='../Cg5i/Cg5i5.html'>우리반 평균 점수</a></li></ul><li><a href='../Cg6i/Cg6i0.html'>함수 자료 전달</a></li><li><a href='../Cg7i/Cg7i0.html'>전처리/파일분할</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>A양과 B군이 가위바위보를 선택하면 승패를 출력하는 문제입니다 이를 해결하는 다음 프로그램에 대해 빈칸을 채우세요 </pre> 				<pre class='selectable'>A양, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>1</span></b>
+가위를 냈습니다.
+B군, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>3</span></b>
+보를 냈습니다.
+A양이 이겼습니다. 
+</pre><br><pre class='selectable'>A양, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>3</span></b>
+보를 냈습니다.
+B군, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>1</span></b>
+가위를 냈습니다.
+B군이 이겼습니다. 
+</pre><br><pre class='selectable'>A양, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>2</span></b>
+바위를 냈습니다.
+B군, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>2</span></b>
+바위를 냈습니다.
+A양과 B군이 비겼습니다. 
+</pre><br>  	  				<h4>코드 빈칸 채우기</h4> 				<pre style='white-space:pre;border:1px'>#include &lt;stdio.h&gt; 
  
-#<input id='blank2' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(2)'> up 'w' 
-#<input id='blank3' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(3)'> UP 'W' 
-#<input id='blank4' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(4)'> down 's' 
-#<input id='blank5' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(5)'> DOWN 'S' 
-#<input id='blank6' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(6)'> left 'a' 
-#<input id='blank7' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(7)'> LEFT 'A' 
-#<input id='blank8' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(8)'> right 'd' 
-#<input id='blank9' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(9)'> RIGHT 'D' 
+<input id='blank0' type='text' required minlength='1' maxlength='30' size='7' onchange='sP3f6(0)'> <input id='blank1' type='text' required minlength='1' maxlength='30' size='4' onchange='sP3f6(1)'> { SCISSOR = 1, ROCK = 2, PAPER = 3 } RPSGame; 
+<input id='blank2' type='text' required minlength='1' maxlength='30' size='7' onchange='sP3f6(2)'> <input id='blank3' type='text' required minlength='1' maxlength='30' size='4' onchange='sP3f6(3)'> { TRUE = 1, FALSE = 0 } Boolean; 
  
-<input id='blank10' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(10)'> main() { 
-	char direction = UP; 
+RPSGame getRockPaperScissors() { 
+	printf( "가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: " ); 
+	int player = ROCK; 
+	scanf( "%d", &player );  
  
-	printf("      / \n"); 
-	printf("  [   옷   문\n"); 
-	printf("      -> \n\n"); 
-	 
-	printf("방향키(WASD)와 [Enter]를 입력하세요: " ); 
-	scanf("%c",&direction); 
- 
-	printf(" <input id='blank11' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(11)'>[2;6f  "); 
-	<input id='blank12' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(12)'>( direction ) { 
-		<input id='blank13' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(13)'> UP: <input id='blank14' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(14)'> up:  
-			printf(" <input id='blank15' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(15)'>[1;6f 옷/ "); 
-			<input id='blank16' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(16)'>; 
-		<input id='blank17' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(17)'> LEFT: <input id='blank18' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(18)'> left:  
-			printf(" <input id='blank19' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(19)'>[2;1f 옷] "); 
-			<input id='blank20' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(20)'>; 
-		<input id='blank21' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(21)'> DOWN: <input id='blank22' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(22)'> down:  
-			printf(" <input id='blank23' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(23)'>[3;6f 옷-> "); 
-			<input id='blank24' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(24)'>; 
-		<input id='blank25' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(25)'> RIGHT: <input id='blank26' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(26)'> right:  
-			printf(" <input id='blank27' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(27)'>[1;1f              \n"); 
-			printf("   Success!!   \n"); 
-			printf("              "); 
+	<input id='blank4' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(4)'>( player ) { 
+	<input id='blank5' type='text' required minlength='1' maxlength='30' size='4' onchange='sP3f6(5)'> SCISSOR: 
+		printf( "가위를 냈습니다.\n" );  
+		<input id='blank6' type='text' required minlength='1' maxlength='30' size='5' onchange='sP3f6(6)'>; 
+	<input id='blank7' type='text' required minlength='1' maxlength='30' size='4' onchange='sP3f6(7)'> ROCK:	 
+		printf( "바위를 냈습니다.\n" );  
+		<input id='blank8' type='text' required minlength='1' maxlength='30' size='5' onchange='sP3f6(8)'>; 
+	<input id='blank9' type='text' required minlength='1' maxlength='30' size='4' onchange='sP3f6(9)'> PAPER: 
+		printf( "보를 냈습니다.\n" );  
 	} 
  
-	return 0; 
-} 	 			</pre> 			</div> 		</div> 	</body> </html> 
+	<input id='blank10' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(10)'> player;									 
+} 
+	 
+Boolean DoesPlayerAWin( RPSGame playerA, RPSGame playerB ) { 
+	return 
+		( ( ( playerA <input id='blank11' type='text' required minlength='1' maxlength='30' size='2' onchange='sP3f6(11)'> SCISSOR ) && ( playerB <input id='blank12' type='text' required minlength='1' maxlength='30' size='2' onchange='sP3f6(12)'> PAPER ) ) 			 
+			|| ( ( playerA <input id='blank13' type='text' required minlength='1' maxlength='30' size='2' onchange='sP3f6(13)'> ROCK ) && ( playerB <input id='blank14' type='text' required minlength='1' maxlength='30' size='2' onchange='sP3f6(14)'> SCISSOR ) ) 
+			|| ( ( playerA <input id='blank15' type='text' required minlength='1' maxlength='30' size='2' onchange='sP3f6(15)'> PAPER ) && ( playerB <input id='blank16' type='text' required minlength='1' maxlength='30' size='2' onchange='sP3f6(16)'> ROCK ) ) )  
+		<input id='blank17' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(17)'> TRUE : FALSE; 
+} 
+ 
+int main() { 
+	printf( "A양, " ); 
+	RPSGame playerA = 
+	          getRockPaperScissors(); 
+	printf( "B군, " ); 
+	RPSGame playerB =  
+	          getRockPaperScissors(); 
+ 
+	if ( playerA == playerB ) 
+		printf( "\nA양과 B군이 비겼습니다.\n" );  
+	else if ( DoesPlayerAWin( playerA, playerB )  
+	                                             == TRUE ) 
+		printf( "\nA양이 이겼습니다.\n" );  
+	else  
+		printf( "\nB군이 이겼습니다.\n" );  
+ 
+	<input id='blank18' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(18)'> 0;									 
+} 	 			</pre> 				<br><br><br><br><br><br><br><br> &nbsp;  			</div> 		</div> 	</body> </html> 
