--- a/Cg5i1s.html
+++ b/Cg5i1s.html
@@ -1,49 +1,57 @@
-<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			var sP3d10 = "1 2 3 4 5 6 7 8 9 10 13 14 15 23"; 		</script> 	</head> 	<body oncontextmenu="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><ul><li><a href='Cg5i1.html'>코드읽기</a></li><li><a href='Cg5i1a.html'>알고리즘</a></li><li><a href='Cg5i1k.html'>키워드</a></li><li><a href='Cg5i1b.html'>빈칸채우기</a></li><li><a href='Cg5i1s.html'>실행순서</a></li><li><a href='Cg5i1m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/Direction.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>캐릭터가 한 칸 이동해서 방패([), 칼(/), 창(->), 출구(문) 중 하나를 선택하는 문제입니다 실행순서를 클릭하세요 </pre> 				<pre class='selectable'>      / 
-  [   옷   문
-      -> 
-WASD와 [Enter]를 입력하세요: <b><font color='red'>a</font></b>
-      / 
- 옷]       문
-      ->
+<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = "1 3 F1b F1e 2 5 F1b F1e 4 6 8 F2b F2e 9 10 13"; 		</script> 	</head> 	<body oncontextmenu="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Cf0i/Cf0i0.html'>C 프로그래밍 시작</a></li><li><a href='../Cf1i/Cf1i0.html'>출력</a></li><li><a href='../Cf2i/Cf2i0.html'>입력</a></li><li><a href='../Cf3i/Cf3i0.html'>변수</a></li><li><a href='../Cf4i/Cf4i0.html'>연산자</a></li><li><a href='../Cf5i/Cf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf6i/Cf6i0.html'>선택문(if)</a></li><li><a href='../Cf7i/Cf7i0.html'>반복문(while)</a></li><li><a href='../Cf8i/Cf8i0.html'>반복문(for)</a></li><li><a href='../Cf9i/Cf9i0.html'>배열</a></li><li><a href='../Cg0i/Cg0i0.html'>문자열</a></li><li><a href='../Cg1i/Cg1i0.html'>함수</a></li><li><a href='../Cg2i/Cg2i0.html'>재귀함수</a></li><li><a href='../Cg3i/Cg3i0.html'>포인터</a></li><li><a href='../Cg4i/Cg4i0.html'>파일입출력</a></li><li><a href='../Cg5i/Cg5i0.html'>열거형/구조체/동적할당</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>가위바위보</a></li><ul><li><a href='Cg5i1.html'>코드읽기</a></li><li><a href='Cg5i1a.html'>알고리즘</a></li><li><a href='Cg5i1k.html'>키워드</a></li><li><a href='Cg5i1b.html'>빈칸채우기</a></li><li><a href='Cg5i1s.html'>실행순서</a></li><li><a href='Cg5i1m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/RockPaperScissors.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i2.html'>학생 정보</a></li><li><a href='../Cg5i/Cg5i3.html'>날짜 및 시간</a></li><li><a href='../Cg5i/Cg5i4.html'>캐릭터 키우기</a></li><li><a href='../Cg5i/Cg5i5.html'>우리반 평균 점수</a></li></ul><li><a href='../Cg6i/Cg6i0.html'>함수 자료 전달</a></li><li><a href='../Cg7i/Cg7i0.html'>전처리/파일분할</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>A양과 B군이 가위바위보를 선택하면 승패를 출력하는 문제입니다 실행순서를 클릭하세요 </pre> 				<pre class='selectable'>A양, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>1</span></b>
+가위를 냈습니다.
+B군, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>3</span></b>
+보를 냈습니다.
+A양이 이겼습니다. 
 </pre><br>  	 				<h4>프로그램 코드</h4> 				<pre></pre><pre id="code0" class="unselectable codeClass">	#include &lt;stdio.h&gt;
 
-</pre><pre id="code0" class="unselectable codeClass">	#define up 'w'
-</pre><pre id="code0" class="unselectable codeClass">	#define UP 'W'
-</pre><pre id="code0" class="unselectable codeClass">	#define down 's'
-</pre><pre id="code0" class="unselectable codeClass">	#define DOWN 'S'
-</pre><pre id="code0" class="unselectable codeClass">	#define left 'a'
-</pre><pre id="code0" class="unselectable codeClass">	#define LEFT 'A'
-</pre><pre id="code0" class="unselectable codeClass">	#define right 'd'
-</pre><pre id="code0" class="unselectable codeClass">	#define RIGHT 'D'
+</pre><pre id="code0" class="unselectable codeClass">	typedef enum { SCISSOR = 1, ROCK = 2, PAPER = 3 } RPSGame;
+</pre><pre id="code0" class="unselectable codeClass">	typedef enum { TRUE = 1, FALSE = 0 } Boolean;
 
-</pre><pre id="code1" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('1')">1	int main() {
-</pre><pre id="code2" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('2')">2		char direction = UP;
+</pre><pre id="codeF1b" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('F1b')">F1b	RPSGame getRockPaperScissors() {
+</pre><pre id="code0" class="unselectable codeClass">		printf( "가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: " );
+</pre><pre id="code0" class="unselectable codeClass">		int player = ROCK;
+</pre><pre id="code0" class="unselectable codeClass">		scanf( "%d", &player );
 
-</pre><pre id="code3" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('3')">3		printf("      / \n");
-</pre><pre id="code4" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('4')">4		printf("  [   옷   문\n");
-</pre><pre id="code5" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('5')">5		printf("      -> \n\n");
-</pre><pre id="code0" class="unselectable codeClass">		
-</pre><pre id="code6" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('6')">6		printf("방향키(WASD)와 [Enter]를 입력하세요: " );
-</pre><pre id="code7" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('7')">7		scanf("%c",&direction);
-
-</pre><pre id="code8" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('8')">8		printf(" \033[2;6f  ");
-</pre><pre id="code9" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('9')">9		switch( direction ) {
-</pre><pre id="code10" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('10')">10			case UP: case up:
-</pre><pre id="code11" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('11')">11				printf(" \033[1;6f 옷/ ");
-</pre><pre id="code12" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('12')">12				break;
-</pre><pre id="code13" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('13')">13			case LEFT: case left:
-</pre><pre id="code14" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('14')">14				printf(" \033[2;1f 옷] ");
-</pre><pre id="code15" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('15')">15				break;
-</pre><pre id="code16" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('16')">16			case DOWN: case down:
-</pre><pre id="code17" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('17')">17				printf(" \033[3;6f 옷-> ");
-</pre><pre id="code18" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('18')">18				break;
-</pre><pre id="code19" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('19')">19			case RIGHT: case right:
-</pre><pre id="code20" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('20')">20				printf(" \033[1;1f              \n");
-</pre><pre id="code21" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('21')">21				printf("   Success!!   \n");
-</pre><pre id="code22" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('22')">22				printf("              ");
+</pre><pre id="code0" class="unselectable codeClass">		switch( player ) {
+</pre><pre id="code0" class="unselectable codeClass">		case SCISSOR:
+</pre><pre id="code0" class="unselectable codeClass">			printf( "가위를 냈습니다.\n" );
+</pre><pre id="code0" class="unselectable codeClass">			break;
+</pre><pre id="code0" class="unselectable codeClass">		case ROCK:
+</pre><pre id="code0" class="unselectable codeClass">			printf( "바위를 냈습니다.\n" );
+</pre><pre id="code0" class="unselectable codeClass">			break;
+</pre><pre id="code0" class="unselectable codeClass">		case PAPER:
+</pre><pre id="code0" class="unselectable codeClass">			printf( "보를 냈습니다.\n" );
 </pre><pre id="code0" class="unselectable codeClass">		}
 
-</pre><pre id="code23" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('23')">23		return 0;
+</pre><pre id="code0" class="unselectable codeClass">		return player;
+</pre><pre id="codeF1e" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('F1e')">F1e	}
+</pre><pre id="code0" class="unselectable codeClass">		
+</pre><pre id="codeF2b" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('F2b')">F2b	Boolean DoesPlayerAWin( RPSGame playerA, RPSGame playerB ) {
+</pre><pre id="code0" class="unselectable codeClass">		return
+</pre><pre id="code0" class="unselectable codeClass">			( ( ( playerA == SCISSOR ) && ( playerB == PAPER ) )
+</pre><pre id="code0" class="unselectable codeClass">				|| ( ( playerA == ROCK ) && ( playerB == SCISSOR ) )
+</pre><pre id="code0" class="unselectable codeClass">				|| ( ( playerA == PAPER ) && ( playerB == ROCK ) ) )
+</pre><pre id="code0" class="unselectable codeClass">			? TRUE : FALSE;
+</pre><pre id="codeF2e" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('F2e')">F2e	}
+
+</pre><pre id="code1" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('1')">1	int main() {
+</pre><pre id="code0" class="unselectable codeClass">		printf( "A양, " );
+</pre><pre id="code2" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('2')">2		RPSGame playerA =
+</pre><pre id="code3" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('3')">3		          getRockPaperScissors();
+</pre><pre id="code0" class="unselectable codeClass">		printf( "B군, " );
+</pre><pre id="code4" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('4')">4		RPSGame playerB =
+</pre><pre id="code5" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('5')">5		          getRockPaperScissors();
+
+</pre><pre id="code6" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('6')">6		if ( playerA == playerB )
+</pre><pre id="code7" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('7')">7			printf( "\nA양과 B군이 비겼습니다.\n" );
+</pre><pre id="code8" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('8')">8		else if ( DoesPlayerAWin( playerA, playerB )
+</pre><pre id="code9" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('9')">9		                                             == TRUE )
+</pre><pre id="code10" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('10')">10			printf( "\nA양이 이겼습니다.\n" );
+</pre><pre id="code11" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('11')">11		else
+</pre><pre id="code12" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('12')">12			printf( "\nB군이 이겼습니다.\n" );
+
+</pre><pre id="code13" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('13')">13		return 0;
 </pre><pre id="code0" class="unselectable codeClass">	}
 </pre>
-</pre> 			</div> 			<div id = "floatingBox"> 				<b>실행 순서</b> 				<pre id = "sP3d4" style='white-space:normal; word-wrap:break-word; width:150px;'></pre> 			</div> 		</div> 	</body> </html>   
+</pre> 				<br><br><br><br><br><br><br><br> &nbsp;  			</div> 			<div id = "floatingBox"> 				<b>실행 순서</b> 				<pre id = "sP3d4" style='white-space:normal; word-wrap:break-word; width:150px;'></pre> 			</div> 		</div> 	</body> </html>   
