--- a/Cg5i2.html
+++ b/Cg5i2.html
@@ -1,115 +1,56 @@
-<html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script type="text/javascript" src="../Js0C1f/C1502.js"></script> 	</head> 	<body onload='sP3f1();' onkeydown='sP3f4()' oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><ul><li><a href='Cg5i2.html'>코드읽기</a></li><li><a href='Cg5i2a.html'>알고리즘</a></li><li><a href='Cg5i2k.html'>키워드</a></li><li><a href='Cg5i2b.html'>빈칸채우기</a></li><li><a href='Cg5i2s.html'>실행순서</a></li><li><a href='Cg5i2m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/RockPaperScissors.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>A양과 B군이 가위바위보를 선택하면 승패를 출력하는 문제입니다 이를 해결하는 다음 프로그램을 해석하세요 </pre> 				<pre class='selectable'>A양, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><font color='red'>2</font></b>
-바위를 냈습니다.
-B군, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><font color='red'>1</font></b>
-가위를 냈습니다.
-A양이 이겼습니다.
-</pre><br><pre class='selectable'>A양, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><font color='red'>3</font></b>
-보를 냈습니다.
-B군, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><font color='red'>1</font></b>
-가위를 냈습니다.
-B군이 이겼습니다.
-</pre><br><pre class='selectable'>A양, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><font color='red'>2</font></b>
-바위를 냈습니다.
-B군, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><font color='red'>2</font></b>
-바위를 냈습니다.
-A양과 B군이 비겼습니다.
-</pre><br> 	  				<h4>알고리즘</h4> 				<pre style='white-space:normal;'> 프로그램시작 <br> &nbsp; &nbsp;A양이 가위바위보중 하나를 선택 <br> &nbsp; &nbsp;B군이 가위바위보중 하나를 선택 <br> &nbsp; &nbsp;A양과 B군의 가위바위보 승패 출력 <br> &nbsp; &nbsp;&nbsp; &nbsp;먼저 A양과 B군이 비긴 경우 출력 <br> &nbsp; &nbsp;&nbsp; &nbsp;A양이 이긴 경우 출력 <br> &nbsp; &nbsp;&nbsp; &nbsp;B군이 이긴 경우 출력 <br> 프로그램 종료 <br> <br> 가위바위보 입력 함수 <br> &nbsp; &nbsp;사용자가 가위바위보중 하나를 선택 <br> &nbsp; &nbsp;사용자가 선택한 결과를 출력 <br> <br> A양이 승리한 경우 확인 매크로 함수 <br> &nbsp; &nbsp;A양이 가위이고 B군이 보를 낸 경우 A양 승리 <br> &nbsp; &nbsp;A양이 바위이고 B군이 가위를 낸 경우 A양 승리 <br> &nbsp; &nbsp;A양이 보이고 B군이 바위를 낸 경우 A양 승리 <br></pre> 		 				<br><h4>프로그램 코드 <input id='btn' type='button' value='실행순서 및 메모리상태 확인' onclick='sP3f5();'/></h4>  				<div id = "codeBox"><pre id="code0" class="unselectable codeClass">	<font color="green">// 파일명 : ./Chapter15/RockPaperScissors.c</font>
-</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="헤더파일(.h) 내용을 소스코드(.c)에 포함하는 명령문">include</font> <<font color='red' title="표준입출력 관련 함수 정보를 가지고 있는 헤더파일">stdio.h</font>>
-</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="헤더파일(.h) 내용을 소스코드(.c)에 포함하는 명령문">include</font> <<font color='red' title="rand, malloc 등 자주 사용되는 함수 정보를 가지고 있는 표준 라이브러리 헤더파일">stdlib.h</font>>
+<html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script type="text/javascript" src="../Js0C1f/C1502.js"></script> 	</head> 	<body onkeydown='sP3f4();' oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Cf0i/Cf0i0.html'>C 프로그래밍 시작</a></li><li><a href='../Cf1i/Cf1i0.html'>출력</a></li><li><a href='../Cf2i/Cf2i0.html'>입력</a></li><li><a href='../Cf3i/Cf3i0.html'>변수</a></li><li><a href='../Cf4i/Cf4i0.html'>연산자</a></li><li><a href='../Cf5i/Cf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf6i/Cf6i0.html'>선택문(if)</a></li><li><a href='../Cf7i/Cf7i0.html'>반복문(while)</a></li><li><a href='../Cf8i/Cf8i0.html'>반복문(for)</a></li><li><a href='../Cf9i/Cf9i0.html'>배열</a></li><li><a href='../Cg0i/Cg0i0.html'>문자열</a></li><li><a href='../Cg1i/Cg1i0.html'>함수</a></li><li><a href='../Cg2i/Cg2i0.html'>재귀함수</a></li><li><a href='../Cg3i/Cg3i0.html'>포인터</a></li><li><a href='../Cg4i/Cg4i0.html'>파일입출력</a></li><li><a href='../Cg5i/Cg5i0.html'>열거형/구조체/동적할당</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i2.html'>학생 정보</a></li><ul><li><a href='Cg5i2.html'>코드읽기</a></li><li><a href='Cg5i2a.html'>알고리즘</a></li><li><a href='Cg5i2k.html'>키워드</a></li><li><a href='Cg5i2b.html'>빈칸채우기</a></li><li><a href='Cg5i2s.html'>실행순서</a></li><li><a href='Cg5i2m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/Student.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i3.html'>날짜 및 시간</a></li><li><a href='../Cg5i/Cg5i4.html'>캐릭터 키우기</a></li><li><a href='../Cg5i/Cg5i5.html'>우리반 평균 점수</a></li></ul><li><a href='../Cg6i/Cg6i0.html'>함수 자료 전달</a></li><li><a href='../Cg7i/Cg7i0.html'>전처리/파일분할</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>학생의 이름, 국어 점수, 영어 점수, 수학 점수를 입력받아 평균을 계산하는 문제입니다 이를 해결하는 다음 프로그램을 해석하세요 </pre> 				<pre class='selectable'>학생 이름을 입력하세요: <b><span style='color:rgb(255,0,0);'>홍길동</span></b>
+0점 ~ 100점 사이의 국어 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>90</span></b>
+0점 ~ 100점 사이의 영어 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>89</span></b>
+0점 ~ 100점 사이의 수학 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>86</span></b>
+홍길동 학생은 국어 90점, 영어 89점, 수학 86점, 평균 88.33점입니다 
+</pre><br><pre class='selectable'>학생 이름을 입력하세요: <b><span style='color:rgb(255,0,0);'>주먹이</span></b>
+0점 ~ 100점 사이의 국어 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>76</span></b>
+0점 ~ 100점 사이의 영어 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>95</span></b>
+0점 ~ 100점 사이의 수학 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>83</span></b>
+주먹이 학생은 국어 76점, 영어 95점, 수학 83점, 평균 84.67점입니다 
+</pre><br><pre class='selectable'>학생 이름을 입력하세요: <b><span style='color:rgb(255,0,0);'>반쪽이</span></b>
+0점 ~ 100점 사이의 국어 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>97</span></b>
+0점 ~ 100점 사이의 영어 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>93</span></b>
+0점 ~ 100점 사이의 수학 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>91</span></b>
+반쪽이 학생은 국어 97점, 영어 93점, 수학 91점, 평균 93.67점입니다 
+</pre><br> 	  				<h4>알고리즘</h4> 				<pre style='white-space:normal;'>프로그램 시작 <br>&nbsp; &nbsp;학생 정보를 초기화 <br>&nbsp; &nbsp;학생 정보를 입력 및 계산 <br>&nbsp; &nbsp;학생 정보를 출력 <br>프로그램 종료 <br></pre> 				 		 				<br><h4>프로그램 코드 <input id='btn' type='button' value='실행순서 및 메모리상태 확인' onclick='sP3f5();'/></h4>  				<div id = "codeBox"><pre id="code0" class="unselectable codeClass">	<font color="green">// 파일명 : ./Chapter15/Student.c</font>
+</pre><pre id="code0" class="unselectable codeClass">	#include &lt;stdio.h&gt;
 </pre><pre id="code0" class="unselectable codeClass">	 
-</pre><pre id="code0" class="unselectable codeClass">	<font color="green">// 가위바위보 매크로 상수 정의</font>
-</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> SCISSOR 1
-</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> ROCK    2
-</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> PAPER   3
-</pre><pre id="code0" class="unselectable codeClass">		 
-</pre><pre id="code0" class="unselectable codeClass">	<font color="green">//<b> A양이 승리한 경우 확인 매크로 함수 </b></font>
-</pre>
-<pre id="codeF1" class="unselectable codeClass">F1	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> DoesPlayerAWin( playerA, playerB )
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> A양이 가위이고 B군이 보를 낸 경우 A양 승리 </b></font>
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> A양이 바위이고 B군이 가위를 낸 경우 A양 승리 </b></font>
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> A양이 보이고 B군이 바위를 낸 경우 A양 승리 </b></font>
-</pre><pre id="code0" class="unselectable codeClass">		( ( ( playerA == SCISSOR ) && ( playerB == PAPER ) )
-</pre><pre id="code0" class="unselectable codeClass">		|| ( ( playerA == ROCK ) && ( playerB == SCISSOR ) )
-</pre><pre id="code0" class="unselectable codeClass">		|| ( ( playerA == PAPER ) && ( playerB == ROCK ) ) )
-</pre><pre id="code0" class="unselectable codeClass">		<font color='red' title="삼항연산자에서 조건식이 참인지 거짓인지 확인하는 기호">?</font> 1 : 0
+</pre><pre id="code0" class="unselectable codeClass">	<font color="green">// 학생 정보 구조체 정의</font>
+</pre><pre id="code0" class="unselectable codeClass">	<a href='../Cg5i/Cg5i0.html' target='keyword'>typedef</a> <a href='../Cg5i/Cg5i0.html#2' target='keyword'>struct</a> {
+</pre><pre id="code0" class="unselectable codeClass">		<a href='../Cf3i/Cf3i0.html#2' target='keyword'>char</a> name[16];
+</pre><pre id="code0" class="unselectable codeClass">		<a href='../Cf3i/Cf3i0.html' target='keyword'>int</a> korean;
+</pre><pre id="code0" class="unselectable codeClass">		<a href='../Cf3i/Cf3i0.html' target='keyword'>int</a> english;
+</pre><pre id="code0" class="unselectable codeClass">		<a href='../Cf3i/Cf3i0.html' target='keyword'>int</a> mathematics;
+</pre><pre id="code0" class="unselectable codeClass">		<a href='../Cf3i/Cf3i0.html#2' target='keyword'>double</a> average;
+</pre><pre id="code0" class="unselectable codeClass">	} Student;
 </pre><pre id="code0" class="unselectable codeClass">	 
-</pre><pre id="code0" class="unselectable codeClass">	<font color="green">//<b> 가위바위보 입력 함수 </b></font>
-</pre>
-<pre id="codeF2b" class="unselectable codeClass">F2b	int getRockPaperScissors() {
-</pre><pre id="code0" class="unselectable codeClass">		int player = 0;
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 사용자가 가위바위보중 하나를 선택 </b></font>
-</pre><pre id="code0" class="unselectable codeClass">		printf("가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: ");
-</pre>
-<pre id="codeF21" class="unselectable codeClass">F21		scanf( "%d", &player );
-</pre><pre id="code0" class="unselectable codeClass">	 
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 사용자가 선택한 결과를 출력 </b></font>
-</pre>
-<pre id="codeF22" class="unselectable codeClass">F22		<font color='red' title="정수형 변수가 특정 정수값이면 해당 명령문을 실행하는 선택문">switch</font>( player ) {
-</pre>
-<pre id="codeF23" class="unselectable codeClass">F23		<font color='red' title="선택문에서 정수형 변수를 특정 정수값과 비교하는 명령문">case</font> SCISSOR:
-</pre><pre id="code0" class="unselectable codeClass">			printf( "가위를 냈습니다.\n" );
-</pre>
-<pre id="codeF24" class="unselectable codeClass">F24			<font color='red' title="실행흐름을 중단하고 해당 영역을 빠져나오는 명령문">break</font>;
-</pre>
-<pre id="codeF25" class="unselectable codeClass">F25		<font color='red' title="선택문에서 정수형 변수를 특정 정수값과 비교하는 명령문">case</font> ROCK:
-</pre><pre id="code0" class="unselectable codeClass">			printf( "바위를 냈습니다.\n" );
-</pre>
-<pre id="codeF26" class="unselectable codeClass">F26			<font color='red' title="실행흐름을 중단하고 해당 영역을 빠져나오는 명령문">break</font>;
-</pre>
-<pre id="codeF27" class="unselectable codeClass">F27		<font color='red' title="선택문에서 정수형 변수를 특정 정수값과 비교하는 명령문">case</font> PAPER:
-</pre><pre id="code0" class="unselectable codeClass">			printf( "보를 냈습니다.\n" );
-</pre><pre id="code0" class="unselectable codeClass">		}
-</pre><pre id="code0" class="unselectable codeClass">			 
-</pre>
-<pre id="codeF28" class="unselectable codeClass">F28		<font color='red' title="함수 종료시 실행흐름이 함수를 호출했던 곳으로 되돌아가는 명령문">return</font> player;
-</pre>
-<pre id="codeF2e" class="unselectable codeClass">F2e	}
-</pre><pre id="code0" class="unselectable codeClass">	 
-</pre><pre id="code0" class="unselectable codeClass">	<font color="green">//<b> 프로그램시작 </b></font>
+</pre><pre id="code0" class="unselectable codeClass">	<font color="green">//<b> 프로그램 시작 </b></font>
 </pre>
 <pre id="code1" class="unselectable codeClass">1	int main() {
-</pre><pre id="code0" class="unselectable codeClass">		int playerA = SCISSOR;
+</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 학생 정보를 초기화  </b></font>
 </pre>
-<pre id="code2" class="unselectable codeClass">2		int playerB = SCISSOR;
+<pre id="code2" class="unselectable codeClass">2		Student student = { "", 0, 0, 0, 0.0 };
 </pre><pre id="code0" class="unselectable codeClass">	 
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> A양이 가위바위보중 하나를 선택 </b></font>
-</pre><pre id="code0" class="unselectable codeClass">		printf("\nA양, ");
+</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 학생 정보를 입력 및 계산  </b></font>
+</pre><pre id="code0" class="unselectable codeClass">		printf( "학생 이름을 입력하세요: " );
+</pre><pre id="code0" class="unselectable codeClass">		scanf( "%s", student<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>name );
+</pre><pre id="code0" class="unselectable codeClass">		printf( "0점 ~ 100점 사이의 국어 점수를 입력하세요: " );
+</pre><pre id="code0" class="unselectable codeClass">		scanf( "%d", &student<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>korean );
+</pre><pre id="code0" class="unselectable codeClass">		printf( "0점 ~ 100점 사이의 영어 점수를 입력하세요: " );
+</pre><pre id="code0" class="unselectable codeClass">		scanf( "%d", &student<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>english );
+</pre><pre id="code0" class="unselectable codeClass">		printf( "0점 ~ 100점 사이의 수학 점수를 입력하세요: " );
+</pre><pre id="code0" class="unselectable codeClass">		scanf( "%d", &student<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>mathematics );
 </pre>
-<pre id="code3" class="unselectable codeClass">3		playerA =
-</pre>
-<pre id="code4" class="unselectable codeClass">4			  getRockPaperScissors();
+<pre id="code3" class="unselectable codeClass">3		student<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>average = <a href='../Cf3i/Cf3i0.html#2' target='keyword'>(double)</a>( student<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>korean + student<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>english + student<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>mathematics ) / 3;
 </pre><pre id="code0" class="unselectable codeClass">	 
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> B군이 가위바위보중 하나를 선택 </b></font>
-</pre><pre id="code0" class="unselectable codeClass">		printf("\nB군, ");
+</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 학생 정보를 출력 </b></font>
 </pre>
-<pre id="code5" class="unselectable codeClass">5		playerB =
-</pre>
-<pre id="code6" class="unselectable codeClass">6			  getRockPaperScissors();
+<pre id="code4" class="unselectable codeClass">4		printf( "%s 학생은 국어 %d점, 영어 %d점, 수학 %d점, 평균 %.2f점입니다",
+</pre><pre id="code0" class="unselectable codeClass">			student<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>name, student<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>korean, student<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>english, student<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>mathematics, student<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>average );
 </pre><pre id="code0" class="unselectable codeClass">		 
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> A양과 B군의 가위바위보 승패 출력 </b></font>
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 먼저 A양과 B군이 비긴 경우 출력  </b></font>
-</pre>
-<pre id="code7" class="unselectable codeClass">7		<font color='red' title="조건식이 참이면 해당 명령문을 실행하는 선택문">if</font> ( playerA == playerB ) {
-</pre>
-<pre id="code8" class="unselectable codeClass">8			printf( "\nA양과 B군이 비겼습니다.\n" );
-</pre><pre id="code0" class="unselectable codeClass">		}
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> A양이 이긴 경우 출력  </b></font>
-</pre>
-<pre id="code9" class="unselectable codeClass">9		else if ( DoesPlayerAWin( playerA, playerB )
-</pre>
-<pre id="code10" class="unselectable codeClass">10		                                             == 1) {
-</pre>
-<pre id="code11" class="unselectable codeClass">11			printf( "\nA양이 이겼습니다.\n" );
-</pre><pre id="code0" class="unselectable codeClass">		}
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> B군이 이긴 경우 출력  </b></font>
-</pre>
-<pre id="code12" class="unselectable codeClass">12		<font color='red' title="모든 조건식이 거짓이면 해당 명령문을 실행하는 선택문">else</font> {
-</pre>
-<pre id="code13" class="unselectable codeClass">13			printf( "\nB군이 이겼습니다.\n" );
-</pre><pre id="code0" class="unselectable codeClass">		}
-</pre><pre id="code0" class="unselectable codeClass">	 
 </pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 프로그램 종료 </b></font>
 </pre>
-<pre id="code14" class="unselectable codeClass">14		<font color='red' title="함수 종료시 실행흐름이 함수를 호출했던 곳으로 되돌아가는 명령문">return</font> 0;
+<pre id="code5" class="unselectable codeClass">5		return 0;
 </pre><pre id="code0" class="unselectable codeClass">	}
-</pre></div>	 	 				<br><h4>키워드 설명</h4> 				<pre id = "sP3d3" style='white-space:normal;'></pre> 			 				<h4>실행 순서</h4> 				<pre id = "sP3d4" style='white-space:normal; width:800px;'> </pre> 				<pre style='white-space:normal;'> 					※ 실행순서 및 메모리상태는 A키(이전) 및 D키(다음)를 눌러도 확인할 수 있습니다  				</pre> 				<br><br> 			</div> 			<div id = "floatingBox"> 				<pre id = "outputBox" class ="outputBox" style = "color:White;height:140px;width:492px;padding:10px;margin:0px;"></pre>  				<div id = "intermediateResult"> 					<img id = "sP3d7"> 					<table style = "border-spacing:0px;margin:0px;table-layout:auto;"> 						<tbody id = "sP3d8"></tbody> 					</table> 				</div> 			</div> 		</div> 	</body> </html> 
+</pre></div>	 	 				<br><h4>실행 순서</h4> 				<pre id = "sP3d4" style='white-space:normal; width:800px;'> </pre> 				<pre style='white-space:normal;'> 					※ 실행순서 및 메모리상태는 A키(이전) 및 D키(다음)를 눌러도 확인할 수 있습니다  				</pre> 				<br><br><br><br><br><br><br><br> &nbsp;  			</div> 			<div id = "floatingBox" style = "top:200px;left:900px;margin:0px;padding:0px;"> 				<pre id = "outputBox" class ="outputBox" style = "color:White;height:95px;width:540px;padding:10px;margin:0px;"></pre>  				<div id = "intermediateResult"> 					<img id = "sP3d7"> 					<table style = "border-spacing:0px;margin:0px;table-layout:auto;"> 						<tbody id = "sP3d8"></tbody> 					</table> 				</div> 			</div> 		</div> 	</body> </html> 
