--- a/Cg5i2b.html
+++ b/Cg5i2b.html
@@ -1,72 +1,43 @@
-<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = [ [ "include","#include" ], [ "stdio.h" ], [ "include","#include" ], [ "stdlib.h" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "?" ], [ "switch","switch()" ], [ "case" ], [ "break","break;" ], [ "case" ], [ "break","break;" ], [ "case" ], [ "return","return;" ], [ "if" ], [ "else" ], [ "return","return;" ], 							]; 		</script> 	</head> 	<body oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><ul><li><a href='Cg5i2.html'>코드읽기</a></li><li><a href='Cg5i2a.html'>알고리즘</a></li><li><a href='Cg5i2k.html'>키워드</a></li><li><a href='Cg5i2b.html'>빈칸채우기</a></li><li><a href='Cg5i2s.html'>실행순서</a></li><li><a href='Cg5i2m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/RockPaperScissors.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>A양과 B군이 가위바위보를 선택하면 승패를 출력하는 문제입니다 이를 해결하는 다음 프로그램에 대해 빈칸을 채우세요 </pre> 				<pre class='selectable'>A양, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><font color='red'>2</font></b>
-바위를 냈습니다.
-B군, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><font color='red'>1</font></b>
-가위를 냈습니다.
-A양이 이겼습니다.
-</pre><br><pre class='selectable'>A양, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><font color='red'>3</font></b>
-보를 냈습니다.
-B군, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><font color='red'>1</font></b>
-가위를 냈습니다.
-B군이 이겼습니다.
-</pre><br><pre class='selectable'>A양, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><font color='red'>2</font></b>
-바위를 냈습니다.
-B군, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><font color='red'>2</font></b>
-바위를 냈습니다.
-A양과 B군이 비겼습니다.
-</pre><br>  	  				<h4>코드 빈칸 채우기</h4> 				<pre style='white-space:pre;border:1px'>#<input id='blank0' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(0)'> <<input id='blank1' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(1)'>>   
-#<input id='blank2' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(2)'> <<input id='blank3' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(3)'>>  
+<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = [ [ "typedef" ], [ "struct" ], [ "char" ], [ "int","short","long" ], [ "int","short","long" ], [ "int","short","long" ], [ "double","float" ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "(double)","(float)" ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], 							]; 		</script> 	</head> 	<body oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Cf0i/Cf0i0.html'>C 프로그래밍 시작</a></li><li><a href='../Cf1i/Cf1i0.html'>출력</a></li><li><a href='../Cf2i/Cf2i0.html'>입력</a></li><li><a href='../Cf3i/Cf3i0.html'>변수</a></li><li><a href='../Cf4i/Cf4i0.html'>연산자</a></li><li><a href='../Cf5i/Cf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf6i/Cf6i0.html'>선택문(if)</a></li><li><a href='../Cf7i/Cf7i0.html'>반복문(while)</a></li><li><a href='../Cf8i/Cf8i0.html'>반복문(for)</a></li><li><a href='../Cf9i/Cf9i0.html'>배열</a></li><li><a href='../Cg0i/Cg0i0.html'>문자열</a></li><li><a href='../Cg1i/Cg1i0.html'>함수</a></li><li><a href='../Cg2i/Cg2i0.html'>재귀함수</a></li><li><a href='../Cg3i/Cg3i0.html'>포인터</a></li><li><a href='../Cg4i/Cg4i0.html'>파일입출력</a></li><li><a href='../Cg5i/Cg5i0.html'>열거형/구조체/동적할당</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i2.html'>학생 정보</a></li><ul><li><a href='Cg5i2.html'>코드읽기</a></li><li><a href='Cg5i2a.html'>알고리즘</a></li><li><a href='Cg5i2k.html'>키워드</a></li><li><a href='Cg5i2b.html'>빈칸채우기</a></li><li><a href='Cg5i2s.html'>실행순서</a></li><li><a href='Cg5i2m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/Student.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i3.html'>날짜 및 시간</a></li><li><a href='../Cg5i/Cg5i4.html'>캐릭터 키우기</a></li><li><a href='../Cg5i/Cg5i5.html'>우리반 평균 점수</a></li></ul><li><a href='../Cg6i/Cg6i0.html'>함수 자료 전달</a></li><li><a href='../Cg7i/Cg7i0.html'>전처리/파일분할</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>학생의 이름, 국어 점수, 영어 점수, 수학 점수를 입력받아 평균을 계산하는 문제입니다 이를 해결하는 다음 프로그램에 대해 빈칸을 채우세요 </pre> 				<pre class='selectable'>학생 이름을 입력하세요: <b><span style='color:rgb(255,0,0);'>홍길동</span></b>
+0점 ~ 100점 사이의 국어 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>90</span></b>
+0점 ~ 100점 사이의 영어 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>89</span></b>
+0점 ~ 100점 사이의 수학 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>86</span></b>
+홍길동 학생은 국어 90점, 영어 89점, 수학 86점, 평균 88.33점입니다 
+</pre><br><pre class='selectable'>학생 이름을 입력하세요: <b><span style='color:rgb(255,0,0);'>주먹이</span></b>
+0점 ~ 100점 사이의 국어 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>76</span></b>
+0점 ~ 100점 사이의 영어 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>95</span></b>
+0점 ~ 100점 사이의 수학 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>83</span></b>
+주먹이 학생은 국어 76점, 영어 95점, 수학 83점, 평균 84.67점입니다 
+</pre><br><pre class='selectable'>학생 이름을 입력하세요: <b><span style='color:rgb(255,0,0);'>반쪽이</span></b>
+0점 ~ 100점 사이의 국어 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>97</span></b>
+0점 ~ 100점 사이의 영어 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>93</span></b>
+0점 ~ 100점 사이의 수학 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>91</span></b>
+반쪽이 학생은 국어 97점, 영어 93점, 수학 91점, 평균 93.67점입니다 
+</pre><br>  	  				<h4>코드 빈칸 채우기</h4> 				<pre style='white-space:pre;border:1px'>#include &lt;stdio.h&gt; 
  
-#<input id='blank4' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(4)'> SCISSOR 1 
-#<input id='blank5' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(5)'> ROCK    2 
-#<input id='blank6' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(6)'> PAPER   3 
-	 
-#<input id='blank7' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(7)'> DoesPlayerAWin( playerA, playerB ) 						 
-	( ( ( playerA == SCISSOR ) && ( playerB == PAPER ) )  
-	|| ( ( playerA == ROCK ) && ( playerB == SCISSOR ) )  
-	|| ( ( playerA == PAPER ) && ( playerB == ROCK ) ) )  
-	<input id='blank8' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(8)'> 1 : 0 
- 
-int getRockPaperScissors() { 
-	int player = 0;	 
-	printf("가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: "); 
-	scanf( "%d", &player ); 	 
- 
-	<input id='blank9' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(9)'>( player ) { 
-	<input id='blank10' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(10)'> SCISSOR:									 
-		printf( "가위를 냈습니다.\n" );  
-		<input id='blank11' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(11)'>; 
-	<input id='blank12' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(12)'> ROCK:									 
-		printf( "바위를 냈습니다.\n" );  
-		<input id='blank13' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(13)'>; 
-	<input id='blank14' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(14)'> PAPER:									 
-		printf( "보를 냈습니다.\n" );  
-	} 
-		 
-	<input id='blank15' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(15)'> player; 
-} 
+<input id='blank0' type='text' required minlength='1' maxlength='30' size='7' onchange='sP3f6(0)'> <input id='blank1' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(1)'> { 	 
+	<input id='blank2' type='text' required minlength='1' maxlength='30' size='4' onchange='sP3f6(2)'> name[16];							 
+	<input id='blank3' type='text' required minlength='1' maxlength='30' size='3' onchange='sP3f6(3)'> korean; 
+	<input id='blank4' type='text' required minlength='1' maxlength='30' size='3' onchange='sP3f6(4)'> english; 
+	<input id='blank5' type='text' required minlength='1' maxlength='30' size='3' onchange='sP3f6(5)'> mathematics; 
+	<input id='blank6' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(6)'> average; 
+} Student;   
  
 int main() { 
-	int playerA = SCISSOR;		 
-	int playerB = SCISSOR;		 
+	Student student = { "", 0, 0, 0, 0.0 }; 
  
-	printf("\nA양, "); 
-	playerA =  
-		  getRockPaperScissors(); 
+	printf( "학생 이름을 입력하세요: " ); 
+	scanf( "%s", student<input id='blank7' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(7)'>name );							 
+	printf( "0점 ~ 100점 사이의 국어 점수를 입력하세요: " ); 
+	scanf( "%d", &student<input id='blank8' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(8)'>korean );							 
+	printf( "0점 ~ 100점 사이의 영어 점수를 입력하세요: " ); 
+	scanf( "%d", &student<input id='blank9' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(9)'>english );							 
+	printf( "0점 ~ 100점 사이의 수학 점수를 입력하세요: " ); 
+	scanf( "%d", &student<input id='blank10' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(10)'>mathematics );						 
+	student<input id='blank11' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(11)'>average = <input id='blank12' type='text' required minlength='1' maxlength='30' size='8' onchange='sP3f6(12)'>( student<input id='blank13' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(13)'>korean + student<input id='blank14' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(14)'>english + student<input id='blank15' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(15)'>mathematics ) / 3;  
  
-	printf("\nB군, "); 
-	playerB =  
-		  getRockPaperScissors(); 
+	printf( "%s 학생은 국어 %d점, 영어 %d점, 수학 %d점, 평균 %.2f점입니다", 
+		student<input id='blank16' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(16)'>name, student<input id='blank17' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(17)'>korean, student<input id='blank18' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(18)'>english, student<input id='blank19' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(19)'>mathematics, student<input id='blank20' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(20)'>average );	 
 	 
-	<input id='blank16' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(16)'> ( playerA == playerB ) { 
-		printf( "\nA양과 B군이 비겼습니다.\n" );  
-	} 
-	else if ( DoesPlayerAWin( playerA, playerB ) 
-	                                             == 1) {	 
-		printf( "\nA양이 이겼습니다.\n" );  
-	} 
-	<input id='blank17' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(17)'> { 
-		printf( "\nB군이 이겼습니다.\n" );  
-	} 
- 
-	<input id='blank18' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(18)'> 0; 
-} 	 			</pre> 			</div> 		</div> 	</body> </html> 
+	return 0; 
+} 	 			</pre> 				<br><br><br><br><br><br><br><br> &nbsp;  			</div> 		</div> 	</body> </html> 
