--- a/Cg5i2s.html
+++ b/Cg5i2s.html
@@ -1,64 +1,35 @@
-<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			var sP3d10 = "1 2 4 F2b F21 F22 F23 F25 F26 F28 F2e 3 6 F2b F21 F22 F23 F24 F28 F2e 5 7 9 F1 10 11 14"; 		</script> 	</head> 	<body oncontextmenu="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><ul><li><a href='Cg5i2.html'>코드읽기</a></li><li><a href='Cg5i2a.html'>알고리즘</a></li><li><a href='Cg5i2k.html'>키워드</a></li><li><a href='Cg5i2b.html'>빈칸채우기</a></li><li><a href='Cg5i2s.html'>실행순서</a></li><li><a href='Cg5i2m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/RockPaperScissors.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>A양과 B군이 가위바위보를 선택하면 승패를 출력하는 문제입니다 실행순서를 클릭하세요 </pre> 				<pre class='selectable'>A양, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><font color='red'>2</font></b>
-바위를 냈습니다.
-B군, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><font color='red'>1</font></b>
-가위를 냈습니다.
-A양이 이겼습니다.
+<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = "1 2 3 4 5"; 		</script> 	</head> 	<body oncontextmenu="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Cf0i/Cf0i0.html'>C 프로그래밍 시작</a></li><li><a href='../Cf1i/Cf1i0.html'>출력</a></li><li><a href='../Cf2i/Cf2i0.html'>입력</a></li><li><a href='../Cf3i/Cf3i0.html'>변수</a></li><li><a href='../Cf4i/Cf4i0.html'>연산자</a></li><li><a href='../Cf5i/Cf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf6i/Cf6i0.html'>선택문(if)</a></li><li><a href='../Cf7i/Cf7i0.html'>반복문(while)</a></li><li><a href='../Cf8i/Cf8i0.html'>반복문(for)</a></li><li><a href='../Cf9i/Cf9i0.html'>배열</a></li><li><a href='../Cg0i/Cg0i0.html'>문자열</a></li><li><a href='../Cg1i/Cg1i0.html'>함수</a></li><li><a href='../Cg2i/Cg2i0.html'>재귀함수</a></li><li><a href='../Cg3i/Cg3i0.html'>포인터</a></li><li><a href='../Cg4i/Cg4i0.html'>파일입출력</a></li><li><a href='../Cg5i/Cg5i0.html'>열거형/구조체/동적할당</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i2.html'>학생 정보</a></li><ul><li><a href='Cg5i2.html'>코드읽기</a></li><li><a href='Cg5i2a.html'>알고리즘</a></li><li><a href='Cg5i2k.html'>키워드</a></li><li><a href='Cg5i2b.html'>빈칸채우기</a></li><li><a href='Cg5i2s.html'>실행순서</a></li><li><a href='Cg5i2m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/Student.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i3.html'>날짜 및 시간</a></li><li><a href='../Cg5i/Cg5i4.html'>캐릭터 키우기</a></li><li><a href='../Cg5i/Cg5i5.html'>우리반 평균 점수</a></li></ul><li><a href='../Cg6i/Cg6i0.html'>함수 자료 전달</a></li><li><a href='../Cg7i/Cg7i0.html'>전처리/파일분할</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>학생의 이름, 국어 점수, 영어 점수, 수학 점수를 입력받아 평균을 계산하는 문제입니다 실행순서를 클릭하세요 </pre> 				<pre class='selectable'>학생 이름을 입력하세요: <b><span style='color:rgb(255,0,0);'>홍길동</span></b>
+0점 ~ 100점 사이의 국어 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>90</span></b>
+0점 ~ 100점 사이의 영어 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>89</span></b>
+0점 ~ 100점 사이의 수학 점수를 입력하세요: <b><span style='color:rgb(255,0,0);'>86</span></b>
+홍길동 학생은 국어 90점, 영어 89점, 수학 86점, 평균 88.33점입니다 
 </pre><br>  	 				<h4>프로그램 코드</h4> 				<pre></pre><pre id="code0" class="unselectable codeClass">	#include &lt;stdio.h&gt;
-</pre><pre id="code0" class="unselectable codeClass">	#include &lt;stdlib.h&gt;
 
-</pre><pre id="code0" class="unselectable codeClass">	#define SCISSOR 1
-</pre><pre id="code0" class="unselectable codeClass">	#define ROCK    2
-</pre><pre id="code0" class="unselectable codeClass">	#define PAPER   3
-</pre><pre id="code0" class="unselectable codeClass">		
-</pre><pre id="codeF1" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('F1')">F1	#define DoesPlayerAWin( playerA, playerB )
-</pre><pre id="code0" class="unselectable codeClass">		( ( ( playerA == SCISSOR ) && ( playerB == PAPER ) )
-</pre><pre id="code0" class="unselectable codeClass">		|| ( ( playerA == ROCK ) && ( playerB == SCISSOR ) )
-</pre><pre id="code0" class="unselectable codeClass">		|| ( ( playerA == PAPER ) && ( playerB == ROCK ) ) )
-</pre><pre id="code0" class="unselectable codeClass">		? 1 : 0
-
-</pre><pre id="codeF2b" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('F2b')">F2b	int getRockPaperScissors() {
-</pre><pre id="code0" class="unselectable codeClass">		int player = 0;
-</pre><pre id="code0" class="unselectable codeClass">		printf("가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: ");
-</pre><pre id="codeF21" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('F21')">F21		scanf( "%d", &player );
-
-</pre><pre id="codeF22" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('F22')">F22		switch( player ) {
-</pre><pre id="codeF23" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('F23')">F23		case SCISSOR:
-</pre><pre id="code0" class="unselectable codeClass">			printf( "가위를 냈습니다.\n" );
-</pre><pre id="codeF24" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('F24')">F24			break;
-</pre><pre id="codeF25" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('F25')">F25		case ROCK:
-</pre><pre id="code0" class="unselectable codeClass">			printf( "바위를 냈습니다.\n" );
-</pre><pre id="codeF26" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('F26')">F26			break;
-</pre><pre id="codeF27" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('F27')">F27		case PAPER:
-</pre><pre id="code0" class="unselectable codeClass">			printf( "보를 냈습니다.\n" );
-</pre><pre id="code0" class="unselectable codeClass">		}
-</pre><pre id="code0" class="unselectable codeClass">			
-</pre><pre id="codeF28" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('F28')">F28		return player;
-</pre><pre id="codeF2e" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('F2e')">F2e	}
+</pre><pre id="code0" class="unselectable codeClass">	typedef struct {
+</pre><pre id="code0" class="unselectable codeClass">		char name[16];
+</pre><pre id="code0" class="unselectable codeClass">		int korean;
+</pre><pre id="code0" class="unselectable codeClass">		int english;
+</pre><pre id="code0" class="unselectable codeClass">		int mathematics;
+</pre><pre id="code0" class="unselectable codeClass">		double average;
+</pre><pre id="code0" class="unselectable codeClass">	} Student;
 
 </pre><pre id="code1" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('1')">1	int main() {
-</pre><pre id="code0" class="unselectable codeClass">		int playerA = SCISSOR;
-</pre><pre id="code2" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('2')">2		int playerB = SCISSOR;
+</pre><pre id="code2" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('2')">2		Student student = { "", 0, 0, 0, 0.0 };
 
-</pre><pre id="code0" class="unselectable codeClass">		printf("\nA양, ");
-</pre><pre id="code3" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('3')">3		playerA =
-</pre><pre id="code4" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('4')">4			  getRockPaperScissors();
+</pre><pre id="code0" class="unselectable codeClass">		printf( "학생 이름을 입력하세요: " );
+</pre><pre id="code0" class="unselectable codeClass">		scanf( "%s", student.name );
+</pre><pre id="code0" class="unselectable codeClass">		printf( "0점 ~ 100점 사이의 국어 점수를 입력하세요: " );
+</pre><pre id="code0" class="unselectable codeClass">		scanf( "%d", &student.korean );
+</pre><pre id="code0" class="unselectable codeClass">		printf( "0점 ~ 100점 사이의 영어 점수를 입력하세요: " );
+</pre><pre id="code0" class="unselectable codeClass">		scanf( "%d", &student.english );
+</pre><pre id="code0" class="unselectable codeClass">		printf( "0점 ~ 100점 사이의 수학 점수를 입력하세요: " );
+</pre><pre id="code0" class="unselectable codeClass">		scanf( "%d", &student.mathematics );
+</pre><pre id="code3" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('3')">3		student.average = (double)( student.korean + student.english + student.mathematics ) / 3;
 
-</pre><pre id="code0" class="unselectable codeClass">		printf("\nB군, ");
-</pre><pre id="code5" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('5')">5		playerB =
-</pre><pre id="code6" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('6')">6			  getRockPaperScissors();
+</pre><pre id="code4" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('4')">4		printf( "%s 학생은 국어 %d점, 영어 %d점, 수학 %d점, 평균 %.2f점입니다",
+</pre><pre id="code0" class="unselectable codeClass">			student.name, student.korean, student.english, student.mathematics, student.average );
 </pre><pre id="code0" class="unselectable codeClass">		
-</pre><pre id="code7" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('7')">7		if ( playerA == playerB ) {
-</pre><pre id="code8" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('8')">8			printf( "\nA양과 B군이 비겼습니다.\n" );
-</pre><pre id="code0" class="unselectable codeClass">		}
-</pre><pre id="code9" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('9')">9		else if ( DoesPlayerAWin( playerA, playerB )
-</pre><pre id="code10" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('10')">10		                                             == 1) {
-</pre><pre id="code11" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('11')">11			printf( "\nA양이 이겼습니다.\n" );
-</pre><pre id="code0" class="unselectable codeClass">		}
-</pre><pre id="code12" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('12')">12		else {
-</pre><pre id="code13" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('13')">13			printf( "\nB군이 이겼습니다.\n" );
-</pre><pre id="code0" class="unselectable codeClass">		}
-
-</pre><pre id="code14" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('14')">14		return 0;
+</pre><pre id="code5" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('5')">5		return 0;
 </pre><pre id="code0" class="unselectable codeClass">	}
 </pre>
-</pre> 			</div> 			<div id = "floatingBox"> 				<b>실행 순서</b> 				<pre id = "sP3d4" style='white-space:normal; word-wrap:break-word; width:150px;'></pre> 			</div> 		</div> 	</body> </html>   
+</pre> 				<br><br><br><br><br><br><br><br> &nbsp;  			</div> 			<div id = "floatingBox"> 				<b>실행 순서</b> 				<pre id = "sP3d4" style='white-space:normal; word-wrap:break-word; width:150px;'></pre> 			</div> 		</div> 	</body> </html>   
