--- a/Cg5i3b.html
+++ b/Cg5i3b.html
@@ -1,35 +1,60 @@
-<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = [ [ "include","#include" ], [ "stdio.h" ], [ "define","#define" ], [ "define","#define" ], [ "(" ], [ ")" ], [ "(" ], [ "(" ], [ ")" ], [ ")" ], [ "define","#define" ], [ "(" ], [ ")" ], [ "(" ], [ "(" ], [ ")" ], [ "(" ], [ ")" ], [ ")" ], 							]; 		</script> 	</head> 	<body oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><ul><li><a href='Cg5i3.html'>코드읽기</a></li><li><a href='Cg5i3a.html'>알고리즘</a></li><li><a href='Cg5i3k.html'>키워드</a></li><li><a href='Cg5i3b.html'>빈칸채우기</a></li><li><a href='Cg5i3s.html'>실행순서</a></li><li><a href='Cg5i3m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/Circle.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>반지름을 입력받아 원둘레와 원면적을 구하는 문제입니다 이를 해결하는 다음 프로그램에 대해 빈칸을 채우세요 </pre> 				<pre class='selectable'>반지름을 입력하세요 : <b><font color='red'>3</font></b>
-반지름 3.00인 원둘레는 18.85이고 원면적은 28.27입니다.
-반지름 ( 3.00 + 1.00 )인 원둘레는 25.13이고 원면적은 50.27입니다.
-</pre><br><pre class='selectable'>반지름을 입력하세요 : <b><font color='red'>2</font></b>
-반지름 2.00인 원둘레는 12.57이고 원면적은 12.57입니다.
-반지름 ( 2.00 + 1.00 )인 원둘레는 18.85이고 원면적은 28.27입니다.
-</pre><br><pre class='selectable'>반지름을 입력하세요 : <b><font color='red'>1</font></b>
-반지름 1.00인 원둘레는 6.28이고 원면적은 3.14입니다.
-반지름 ( 1.00 + 1.00 )인 원둘레는 12.57이고 원면적은 12.57입니다.
-</pre><br>  	  				<h4>코드 빈칸 채우기</h4> 				<pre style='white-space:pre;border:1px'>#<input id='blank0' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(0)'> <<input id='blank1' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(1)'>>  
-#<input id='blank2' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(2)'> PI 3.141592				 
-#<input id='blank3' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(3)'> CIRCUMFERENCE<input id='blank4' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(4)'> r <input id='blank5' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(5)'>  <input id='blank6' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(6)'> 2 * PI * <input id='blank7' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(7)'> r <input id='blank8' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(8)'> <input id='blank9' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(9)'>		 
-#<input id='blank10' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(10)'> CIRCULARAREA<input id='blank11' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(11)'> r <input id='blank12' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(12)'> <input id='blank13' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(13)'> PI * <input id='blank14' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(14)'> r <input id='blank15' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(15)'> * <input id='blank16' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(16)'> r <input id='blank17' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(17)'> <input id='blank18' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(18)'> 		 
+<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = [ [ "typedef" ], [ "struct" ], [ "int","short","long" ], [ "int","short","long" ], [ "int","short","long" ], [ "typedef" ], [ "struct" ], [ "int","short","long" ], [ "int","short","long" ], [ "int","short","long" ], [ "typedef" ], [ "struct" ], [ "Date" ], [ "Time" ], [ "int","short","long" ], [ "DateTime" ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], 							]; 		</script> 	</head> 	<body oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Cf0i/Cf0i0.html'>C 프로그래밍 시작</a></li><li><a href='../Cf1i/Cf1i0.html'>출력</a></li><li><a href='../Cf2i/Cf2i0.html'>입력</a></li><li><a href='../Cf3i/Cf3i0.html'>변수</a></li><li><a href='../Cf4i/Cf4i0.html'>연산자</a></li><li><a href='../Cf5i/Cf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf6i/Cf6i0.html'>선택문(if)</a></li><li><a href='../Cf7i/Cf7i0.html'>반복문(while)</a></li><li><a href='../Cf8i/Cf8i0.html'>반복문(for)</a></li><li><a href='../Cf9i/Cf9i0.html'>배열</a></li><li><a href='../Cg0i/Cg0i0.html'>문자열</a></li><li><a href='../Cg1i/Cg1i0.html'>함수</a></li><li><a href='../Cg2i/Cg2i0.html'>재귀함수</a></li><li><a href='../Cg3i/Cg3i0.html'>포인터</a></li><li><a href='../Cg4i/Cg4i0.html'>파일입출력</a></li><li><a href='../Cg5i/Cg5i0.html'>열거형/구조체/동적할당</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i2.html'>학생 정보</a></li><li><a href='../Cg5i/Cg5i3.html'>날짜 및 시간</a></li><ul><li><a href='Cg5i3.html'>코드읽기</a></li><li><a href='Cg5i3a.html'>알고리즘</a></li><li><a href='Cg5i3k.html'>키워드</a></li><li><a href='Cg5i3b.html'>빈칸채우기</a></li><li><a href='Cg5i3s.html'>실행순서</a></li><li><a href='Cg5i3m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/DateTime.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i4.html'>캐릭터 키우기</a></li><li><a href='../Cg5i/Cg5i5.html'>우리반 평균 점수</a></li></ul><li><a href='../Cg6i/Cg6i0.html'>함수 자료 전달</a></li><li><a href='../Cg7i/Cg7i0.html'>전처리/파일분할</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>사용자가 현재 날짜와 시간 정보를 입력하면 그 결과를 출력하는 문제입니다 이를 해결하는 다음 프로그램에 대해 빈칸을 채우세요 </pre> 				<pre class='selectable'>올해를 입력하세요: <b><span style='color:rgb(255,0,0);'>1397</span></b>
+이번달을 입력하세요: <b><span style='color:rgb(255,0,0);'>5</span></b>
+오늘을 입력하세요: <b><span style='color:rgb(255,0,0);'>15</span></b>
+현재 시간을 입력하세요: <b><span style='color:rgb(255,0,0);'>11</span></b>
+현재 분을 입력하세요: <b><span style='color:rgb(255,0,0);'>30</span></b>
+현재 초를 입력하세요: <b><span style='color:rgb(255,0,0);'>15</span></b>
+현재 시간은 1397년 5월 15일 11시 30분 15초입니다 
+</pre><br><pre class='selectable'>올해를 입력하세요: <b><span style='color:rgb(255,0,0);'>1752</span></b>
+이번달을 입력하세요: <b><span style='color:rgb(255,0,0);'>10</span></b>
+오늘을 입력하세요: <b><span style='color:rgb(255,0,0);'>28</span></b>
+현재 시간을 입력하세요: <b><span style='color:rgb(255,0,0);'>9</span></b>
+현재 분을 입력하세요: <b><span style='color:rgb(255,0,0);'>05</span></b>
+현재 초를 입력하세요: <b><span style='color:rgb(255,0,0);'>10</span></b>
+현재 시간은 1752년 10월 28일 9시 05분 10초입니다 
+</pre><br><pre class='selectable'>올해를 입력하세요: <b><span style='color:rgb(255,0,0);'>1457</span></b>
+이번달을 입력하세요: <b><span style='color:rgb(255,0,0);'>8</span></b>
+오늘을 입력하세요: <b><span style='color:rgb(255,0,0);'>28</span></b>
+현재 시간을 입력하세요: <b><span style='color:rgb(255,0,0);'>12</span></b>
+현재 분을 입력하세요: <b><span style='color:rgb(255,0,0);'>59</span></b>
+현재 초를 입력하세요: <b><span style='color:rgb(255,0,0);'>59</span></b>
+현재 시간은 1457년 8월 28일 12시 59분 59초입니다 
+</pre><br>  	  				<h4>코드 빈칸 채우기</h4> 				<pre style='white-space:pre;border:1px'>#include &lt;stdio.h&gt; 
  
-int main() { 
-	double radius = 0.0;						 
-	double circumference = 0.0;	 
-	double circularArea = 0.0;	 
-	printf("반지름을 입력하세요 : "); 
-	scanf("%lf", &radius ); 
-	circumference =  
-		 	CIRCUMFERENCE( radius ); 
-	circularArea =  
-		 	CIRCULARAREA( radius ); 
-	printf("반지름 %.2f인 원둘레는 %.2f이고 원면적은 %.2f입니다.\n", 
-					radius, circumference, circularArea ); 
-	circumference =  
-		 	CIRCUMFERENCE( radius + 1 ); 
-	circularArea =  
-		 	CIRCULARAREA( radius + 1 ); 
-	printf("반지름 ( %.2f + 1.00 )인 원둘레는 %.2f이고 원면적은 %.2f입니다.", 
-					radius, circumference, circularArea); 
+<input id='blank0' type='text' required minlength='1' maxlength='30' size='7' onchange='sP3f6(0)'> <input id='blank1' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(1)'> { 							 
+	<input id='blank2' type='text' required minlength='1' maxlength='30' size='3' onchange='sP3f6(2)'> year; 
+	<input id='blank3' type='text' required minlength='1' maxlength='30' size='3' onchange='sP3f6(3)'> month; 
+	<input id='blank4' type='text' required minlength='1' maxlength='30' size='3' onchange='sP3f6(4)'> day; 
+} Date; 
  
+<input id='blank5' type='text' required minlength='1' maxlength='30' size='7' onchange='sP3f6(5)'> <input id='blank6' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(6)'> { 								 
+	<input id='blank7' type='text' required minlength='1' maxlength='30' size='3' onchange='sP3f6(7)'> hour;			 
+	<input id='blank8' type='text' required minlength='1' maxlength='30' size='3' onchange='sP3f6(8)'> minute; 
+	<input id='blank9' type='text' required minlength='1' maxlength='30' size='3' onchange='sP3f6(9)'> second; 
+} Time; 
+ 
+<input id='blank10' type='text' required minlength='1' maxlength='30' size='7' onchange='sP3f6(10)'> <input id='blank11' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(11)'> { 								 
+	<input id='blank12' type='text' required minlength='1' maxlength='30' size='4' onchange='sP3f6(12)'>  date;					  
+	<input id='blank13' type='text' required minlength='1' maxlength='30' size='4' onchange='sP3f6(13)'>  time;					  
+} DateTime; 
+	 
+<input id='blank14' type='text' required minlength='1' maxlength='30' size='3' onchange='sP3f6(14)'> main() { 
+	<input id='blank15' type='text' required minlength='1' maxlength='30' size='8' onchange='sP3f6(15)'> now = { { 0, 0, 0 }, { 0, 0, 0 } };  
+	printf( "올해를 입력하세요: " ); 
+	scanf( "%d", &now<input id='blank16' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(16)'>date<input id='blank17' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(17)'>year );					 
+	printf( "이번달을 입력하세요: " ); 
+	scanf( "%d", &now<input id='blank18' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(18)'>date<input id='blank19' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(19)'>month );					 
+	printf( "오늘을 입력하세요: " ); 
+	scanf( "%d", &now<input id='blank20' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(20)'>date<input id='blank21' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(21)'>day );	 
+				 
+	printf( "현재 시간을 입력하세요: " );		 
+	scanf( "%d", &now<input id='blank22' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(22)'>time<input id='blank23' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(23)'>hour ); 					 
+	printf( "현재 분을 입력하세요: " ); 
+	scanf( "%d", &now<input id='blank24' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(24)'>time<input id='blank25' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(25)'>minute );					 
+	printf( "현재 초를 입력하세요: " );	 
+	scanf( "%d", &now<input id='blank26' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(26)'>time<input id='blank27' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(27)'>second );	 
+ 
+	printf( "현재 시간은 %d년 %d월 %d일 %d시 %d분 %d초입니다", now<input id='blank28' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(28)'>date<input id='blank29' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(29)'>year, now<input id='blank30' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(30)'>date<input id='blank31' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(31)'>month, now<input id='blank32' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(32)'>date<input id='blank33' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(33)'>day, now<input id='blank34' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(34)'>time<input id='blank35' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(35)'>hour, now<input id='blank36' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(36)'>time<input id='blank37' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(37)'>minute, now<input id='blank38' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(38)'>time<input id='blank39' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(39)'>second);	 
+						 
 	return 0; 
-} 	 			</pre> 			</div> 		</div> 	</body> </html> 
+} 	 			</pre> 				<br><br><br><br><br><br><br><br> &nbsp;  			</div> 		</div> 	</body> </html> 
