--- a/Cg5i3s.html
+++ b/Cg5i3s.html
@@ -1,35 +1,49 @@
-<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			var sP3d10 = "3 4 5 7 1 6 9 2 8 10 12 1 11 14 2 13 15 16"; 		</script> 	</head> 	<body oncontextmenu="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><ul><li><a href='Cg5i3.html'>코드읽기</a></li><li><a href='Cg5i3a.html'>알고리즘</a></li><li><a href='Cg5i3k.html'>키워드</a></li><li><a href='Cg5i3b.html'>빈칸채우기</a></li><li><a href='Cg5i3s.html'>실행순서</a></li><li><a href='Cg5i3m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/Circle.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>반지름을 입력받아 원둘레와 원면적을 구하는 문제입니다 실행순서를 클릭하세요 </pre> 				<pre class='selectable'>반지름을 입력하세요 : <b><font color='red'>3</font></b>
-반지름 3.00인 원둘레는 18.85이고 원면적은 28.27입니다.
-반지름 ( 3.00 + 1.00 )인 원둘레는 25.13이고 원면적은 50.27입니다.
+<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = "1 2 3 4 5 6 7 8 9 10"; 		</script> 	</head> 	<body oncontextmenu="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Cf0i/Cf0i0.html'>C 프로그래밍 시작</a></li><li><a href='../Cf1i/Cf1i0.html'>출력</a></li><li><a href='../Cf2i/Cf2i0.html'>입력</a></li><li><a href='../Cf3i/Cf3i0.html'>변수</a></li><li><a href='../Cf4i/Cf4i0.html'>연산자</a></li><li><a href='../Cf5i/Cf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf6i/Cf6i0.html'>선택문(if)</a></li><li><a href='../Cf7i/Cf7i0.html'>반복문(while)</a></li><li><a href='../Cf8i/Cf8i0.html'>반복문(for)</a></li><li><a href='../Cf9i/Cf9i0.html'>배열</a></li><li><a href='../Cg0i/Cg0i0.html'>문자열</a></li><li><a href='../Cg1i/Cg1i0.html'>함수</a></li><li><a href='../Cg2i/Cg2i0.html'>재귀함수</a></li><li><a href='../Cg3i/Cg3i0.html'>포인터</a></li><li><a href='../Cg4i/Cg4i0.html'>파일입출력</a></li><li><a href='../Cg5i/Cg5i0.html'>열거형/구조체/동적할당</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i2.html'>학생 정보</a></li><li><a href='../Cg5i/Cg5i3.html'>날짜 및 시간</a></li><ul><li><a href='Cg5i3.html'>코드읽기</a></li><li><a href='Cg5i3a.html'>알고리즘</a></li><li><a href='Cg5i3k.html'>키워드</a></li><li><a href='Cg5i3b.html'>빈칸채우기</a></li><li><a href='Cg5i3s.html'>실행순서</a></li><li><a href='Cg5i3m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/DateTime.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i4.html'>캐릭터 키우기</a></li><li><a href='../Cg5i/Cg5i5.html'>우리반 평균 점수</a></li></ul><li><a href='../Cg6i/Cg6i0.html'>함수 자료 전달</a></li><li><a href='../Cg7i/Cg7i0.html'>전처리/파일분할</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>사용자가 현재 날짜와 시간 정보를 입력하면 그 결과를 출력하는 문제입니다 실행순서를 클릭하세요 </pre> 				<pre class='selectable'>올해를 입력하세요: <b><span style='color:rgb(255,0,0);'>1397</span></b>
+이번달을 입력하세요: <b><span style='color:rgb(255,0,0);'>5</span></b>
+오늘을 입력하세요: <b><span style='color:rgb(255,0,0);'>15</span></b>
+현재 시간을 입력하세요: <b><span style='color:rgb(255,0,0);'>11</span></b>
+현재 분을 입력하세요: <b><span style='color:rgb(255,0,0);'>30</span></b>
+현재 초를 입력하세요: <b><span style='color:rgb(255,0,0);'>15</span></b>
+현재 시간은 1397년 5월 15일 11시 30분 15초입니다 
 </pre><br>  	 				<h4>프로그램 코드</h4> 				<pre></pre><pre id="code0" class="unselectable codeClass">	#include &lt;stdio.h&gt;
 
-</pre><pre id="code0" class="unselectable codeClass">	#define PI 3.141592
-</pre><pre id="code1" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('1')">1	#define CIRCUMFERENCE( r )  ( 2 * PI * ( r ) )
-</pre><pre id="code2" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('2')">2	#define CIRCULARAREA( r ) ( PI * ( r ) * ( r ) )
+</pre><pre id="code0" class="unselectable codeClass">	typedef struct {
+</pre><pre id="code0" class="unselectable codeClass">		int year;
+</pre><pre id="code0" class="unselectable codeClass">		int month;
+</pre><pre id="code0" class="unselectable codeClass">		int day;
+</pre><pre id="code0" class="unselectable codeClass">	} Date;
 
-</pre><pre id="code3" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('3')">3	int main() {
-</pre><pre id="code0" class="unselectable codeClass">		double radius = 0.0;
-</pre><pre id="code0" class="unselectable codeClass">		double circumference = 0.0;
-</pre><pre id="code4" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('4')">4		double circularArea = 0.0;
+</pre><pre id="code0" class="unselectable codeClass">	typedef struct {
+</pre><pre id="code0" class="unselectable codeClass">		int hour;
+</pre><pre id="code0" class="unselectable codeClass">		int minute;
+</pre><pre id="code0" class="unselectable codeClass">		int second;
+</pre><pre id="code0" class="unselectable codeClass">	} Time;
 
-</pre><pre id="code0" class="unselectable codeClass">		printf("반지름을 입력하세요 : ");
-</pre><pre id="code5" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('5')">5		scanf("%lf", &radius );
+</pre><pre id="code0" class="unselectable codeClass">	typedef struct {
+</pre><pre id="code0" class="unselectable codeClass">		Date  date;
+</pre><pre id="code0" class="unselectable codeClass">		Time  time;
+</pre><pre id="code0" class="unselectable codeClass">	} DateTime;
+</pre><pre id="code0" class="unselectable codeClass">		
+</pre><pre id="code1" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('1')">1	int main() {
+</pre><pre id="code2" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('2')">2		DateTime now = { { 0, 0, 0 }, { 0, 0, 0 } };
 
-</pre><pre id="code6" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('6')">6		circumference =
-</pre><pre id="code7" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('7')">7			 	CIRCUMFERENCE( radius );
-</pre><pre id="code8" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('8')">8		circularArea =
-</pre><pre id="code9" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('9')">9			 	CIRCULARAREA( radius );
-</pre><pre id="code10" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('10')">10		printf("반지름 %.2f인 원둘레는 %.2f이고 원면적은 %.2f입니다.\n",
-</pre><pre id="code0" class="unselectable codeClass">						radius, circumference, circularArea );
+</pre><pre id="code0" class="unselectable codeClass">		printf( "올해를 입력하세요: " );
+</pre><pre id="code3" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('3')">3		scanf( "%d", &now.date.year );
+</pre><pre id="code0" class="unselectable codeClass">		printf( "이번달을 입력하세요: " );
+</pre><pre id="code4" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('4')">4		scanf( "%d", &now.date.month );
+</pre><pre id="code0" class="unselectable codeClass">		printf( "오늘을 입력하세요: " );
+</pre><pre id="code5" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('5')">5		scanf( "%d", &now.date.day );
+</pre><pre id="code0" class="unselectable codeClass">					
+</pre><pre id="code0" class="unselectable codeClass">		printf( "현재 시간을 입력하세요: " );
+</pre><pre id="code6" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('6')">6		scanf( "%d", &now.time.hour );
+</pre><pre id="code0" class="unselectable codeClass">		printf( "현재 분을 입력하세요: " );
+</pre><pre id="code7" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('7')">7		scanf( "%d", &now.time.minute );
+</pre><pre id="code0" class="unselectable codeClass">		printf( "현재 초를 입력하세요: " );
+</pre><pre id="code8" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('8')">8		scanf( "%d", &now.time.second );
 
-</pre><pre id="code11" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('11')">11		circumference =
-</pre><pre id="code12" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('12')">12			 	CIRCUMFERENCE( radius + 1 );
-</pre><pre id="code13" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('13')">13		circularArea =
-</pre><pre id="code14" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('14')">14			 	CIRCULARAREA( radius + 1 );
-</pre><pre id="code15" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('15')">15		printf("반지름 ( %.2f + 1.00 )인 원둘레는 %.2f이고 원면적은 %.2f입니다.",
-</pre><pre id="code0" class="unselectable codeClass">						radius, circumference, circularArea);
-
-</pre><pre id="code16" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('16')">16		return 0;
+</pre><pre id="code9" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('9')">9		printf( "현재 시간은 %d년 %d월 %d일 %d시 %d분 %d초입니다", now.date.year, now.date.month, now.date.day, now.time.hour, now.time.minute, now.time.second);
+</pre><pre id="code0" class="unselectable codeClass">							
+</pre><pre id="code10" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('10')">10		return 0;
 </pre><pre id="code0" class="unselectable codeClass">	}
 </pre>
-</pre> 			</div> 			<div id = "floatingBox"> 				<b>실행 순서</b> 				<pre id = "sP3d4" style='white-space:normal; word-wrap:break-word; width:150px;'></pre> 			</div> 		</div> 	</body> </html>   
+</pre> 				<br><br><br><br><br><br><br><br> &nbsp;  			</div> 			<div id = "floatingBox"> 				<b>실행 순서</b> 				<pre id = "sP3d4" style='white-space:normal; word-wrap:break-word; width:150px;'></pre> 			</div> 		</div> 	</body> </html>   
