--- a/Cg5i4.html
+++ b/Cg5i4.html
@@ -1,64 +1,123 @@
-<html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script type="text/javascript" src="../Js0C1f/C1504.js"></script> 	</head> 	<body onload='sP3f1();' onkeydown='sP3f4()' oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><ul><li><a href='Cg5i4.html'>코드읽기</a></li><li><a href='Cg5i4a.html'>알고리즘</a></li><li><a href='Cg5i4k.html'>키워드</a></li><li><a href='Cg5i4b.html'>빈칸채우기</a></li><li><a href='Cg5i4s.html'>실행순서</a></li><li><a href='Cg5i4m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/ThreeCupGame.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>구슬을 3개 컵 중에서 어디에 숨겼는지 사용자가 맞추는 문제입니다 이를 해결하는 다음 프로그램을 해석하세요 </pre> 				<pre class='selectable'>  ___    ___    ___  
- |   |  |   |  |   | 
- | 1 |  | 2 |  | 3 | 
-   O 
- 찾았다!
- 1, 2, 3 중에서 구슬[O]을 숨긴 컵을 찾으세요 : <b><font color='red'>1</font></b>
- [DEBUG] 구슬 위치 1
-</pre><br><pre class='selectable'>  ___    ___    ___  
- |   |  |   |  |   | 
- | 1 |  | 2 |  | 3 | 
-                 O 
-        놓쳤다!
- 1, 2, 3 중에서 구슬[O]을 숨긴 컵을 찾으세요 : <b><font color='red'>2</font></b>
- [DEBUG] 구슬 위치 3
-</pre><br><pre class='selectable'>  ___    ___    ___  
- |   |  |   |  |   | 
- | 1 |  | 2 |  | 3 | 
-          O 
-               놓쳤다!
- 1, 2, 3 중에서 구슬[O]을 숨긴 컵을 찾으세요 : <b><font color='red'>3</font></b>
- [DEBUG] 구슬 위치 2
-</pre><br> 	  				<h4>알고리즘</h4> 				<pre style='white-space:normal;'>프로그램시작 <br>&nbsp; &nbsp;먼저 3개 컵 중에서 하나에 구슬 숨기기 <br>&nbsp; &nbsp;사용자에게 구슬을 숨긴 컵 번호 입력 받기 <br>&nbsp; &nbsp;구슬 찾기 결과 출력 <br>프로그램 종료 <br></pre> 		 				<br><h4>프로그램 코드 <input id='btn' type='button' value='실행순서 및 메모리상태 확인' onclick='sP3f5();'/></h4>  				<div id = "codeBox"><pre id="code0" class="unselectable codeClass">	<font color="green">// 파일명 : ./Chapter15/ThreeCupGame.c</font>
-</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="헤더파일(.h) 내용을 소스코드(.c)에 포함하는 명령문">include</font> <<font color='red' title="표준입출력 관련 함수 정보를 가지고 있는 헤더파일">stdio.h</font>>
-</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="헤더파일(.h) 내용을 소스코드(.c)에 포함하는 명령문">include</font> <<font color='red' title="rand, malloc 등 자주 사용되는 함수 정보를 가지고 있는 표준 라이브러리 헤더파일">stdlib.h</font>>
-</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="헤더파일(.h) 내용을 소스코드(.c)에 포함하는 명령문">include</font> <<font color='red' title="시간 관련 함수 정보를 가지고 있는 헤더파일">time.h</font>>
+<html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script type="text/javascript" src="../Js0C1f/C1504.js"></script> 	</head> 	<body onkeydown='sP3f4();' oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Cf0i/Cf0i0.html'>C 프로그래밍 시작</a></li><li><a href='../Cf1i/Cf1i0.html'>출력</a></li><li><a href='../Cf2i/Cf2i0.html'>입력</a></li><li><a href='../Cf3i/Cf3i0.html'>변수</a></li><li><a href='../Cf4i/Cf4i0.html'>연산자</a></li><li><a href='../Cf5i/Cf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf6i/Cf6i0.html'>선택문(if)</a></li><li><a href='../Cf7i/Cf7i0.html'>반복문(while)</a></li><li><a href='../Cf8i/Cf8i0.html'>반복문(for)</a></li><li><a href='../Cf9i/Cf9i0.html'>배열</a></li><li><a href='../Cg0i/Cg0i0.html'>문자열</a></li><li><a href='../Cg1i/Cg1i0.html'>함수</a></li><li><a href='../Cg2i/Cg2i0.html'>재귀함수</a></li><li><a href='../Cg3i/Cg3i0.html'>포인터</a></li><li><a href='../Cg4i/Cg4i0.html'>파일입출력</a></li><li><a href='../Cg5i/Cg5i0.html'>열거형/구조체/동적할당</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i2.html'>학생 정보</a></li><li><a href='../Cg5i/Cg5i3.html'>날짜 및 시간</a></li><li><a href='../Cg5i/Cg5i4.html'>캐릭터 키우기</a></li><ul><li><a href='Cg5i4.html'>코드읽기</a></li><li><a href='Cg5i4a.html'>알고리즘</a></li><li><a href='Cg5i4k.html'>키워드</a></li><li><a href='Cg5i4b.html'>빈칸채우기</a></li><li><a href='Cg5i4s.html'>실행순서</a></li><li><a href='Cg5i4m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/CharacterRaising.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i5.html'>우리반 평균 점수</a></li></ul><li><a href='../Cg6i/Cg6i0.html'>함수 자료 전달</a></li><li><a href='../Cg7i/Cg7i0.html'>전처리/파일분할</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>잠자기, 노래, 산책, 먹기를 선택해서 캐릭터의 능력치을 키우는 문제입니다 이를 해결하는 다음 프로그램을 해석하세요 </pre> 				<pre class='selectable'><div style='font-family:monospace;line-height:1;'>  _
+_| |_
+(-_-)
+(   )            
+	
+체력 2  경험 1  기분 2
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>2</span></b>
+  _
+_| |_
+(^O^) ~♩~~♪~♬~♩~
+(   )            
+	
+체력 3  경험 4  기분 6
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>5</span></b>
+</div> 
+</pre><br><pre class='selectable'><div style='font-family:monospace;line-height:1;'>  _
+_| |_
+(-_-)
+(   )            
+	
+체력 2  경험 1  기분 2
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>1</span></b>
+  _
+_| |_
+(-_-)            
+(   )            
+	
+체력 4  경험 2  기분 4
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>2</span></b>
+  _	
+_| |_
+(^O^) ~♩~~♪~♬~♩~ 
+(   )            
+	
+체력 5  경험 5  기분 8
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>3</span></b>
+  _
+_| |_
+(O.O)   O   O     
+(   )<span style='font-family:Courier;'> \|/\|/   </span> 
+	
+체력 9  경험 9  기분11
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>4</span></b>
+  _
+_| |_
+(@O@)            
+(   ) |_|>       
+	
+체력12  경험11  기분12
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>5</span></b>
+</div> 
+</pre><br><pre class='selectable'><div style='font-family:monospace;line-height:1;'>  _
+_| |_
+(-_-)
+(   )            
+	
+체력 2  경험 1  기분 2
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>5</span></b>
+</div> 
+</pre><br> 	  				<h4>알고리즘</h4> 				<pre style='white-space:normal;'> 프로그램 시작 <br> &nbsp; &nbsp;먼저 캐릭터 키운 결과 출력 <br> &nbsp; &nbsp;새로운 입력 받아서 게임 계속 진행 <br> 프로그램 종료 <br> <br> 캐릭터 키우기 함수 <br></pre> 				 		 				<br><h4>프로그램 코드 <input id='btn' type='button' value='실행순서 및 메모리상태 확인' onclick='sP3f5();'/></h4>  				<div id = "codeBox"><pre id="code0" class="unselectable codeClass">	<font color="green">// 파일명 : ./Chapter15/CharacterRaising.c</font>
+</pre><pre id="code0" class="unselectable codeClass">	#include &lt;stdio.h&gt;
+</pre><pre id="code0" class="unselectable codeClass">	#include &lt;string.h&gt;
 </pre><pre id="code0" class="unselectable codeClass">	 
-</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> DEBUG
+</pre><pre id="code0" class="unselectable codeClass">	<a href='../Cg5i/Cg5i0.html' target='keyword'>typedef</a> <a href='../Cg5i/Cg5i0.html#2' target='keyword'>struct</a> {
+</pre><pre id="code0" class="unselectable codeClass">		int hp;
+</pre><pre id="code0" class="unselectable codeClass">		int xp;
+</pre><pre id="code0" class="unselectable codeClass">		int fl;
+</pre><pre id="code0" class="unselectable codeClass">		char image[64];
+</pre><pre id="code0" class="unselectable codeClass">	} Stat;
 </pre><pre id="code0" class="unselectable codeClass">	 
-</pre><pre id="code0" class="unselectable codeClass">	<font color="green">//<b> 프로그램시작  </b></font>
+</pre><pre id="code0" class="unselectable codeClass">	<font color="green">//<b> 캐릭터 키우기 함수 </b></font>
+</pre>
+<pre id="codeFb" class="unselectable codeClass">Fb	Stat raise( Stat character, int action ) {
+</pre><pre id="code0" class="unselectable codeClass">		Stat stat[4] = { { 2, 1, 2, "  _\n_| |_\n(-_-)            \n(   )            \n" },
+</pre><pre id="code0" class="unselectable codeClass">	                        { 1, 3, 4, "  _\n_| |_\n(^O^) ~♩~~♪~♬~♩~\n(   )            \n",  },
+</pre><pre id="code0" class="unselectable codeClass">	                        { 4, 4, 3, "  _\n_| |_\n(O.O)  O   O     \n(   ) \\|/ \\|/    \n" },
+</pre><pre id="code0" class="unselectable codeClass">	                        { 3, 2, 1, "  _\n_| |_\n(@O@)            \n(   ) |_|&gt;       \n" } };
+</pre><pre id="code0" class="unselectable codeClass">	 
+</pre><pre id="code0" class="unselectable codeClass">		character<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>hp += stat[action-1]<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>hp;
+</pre><pre id="code0" class="unselectable codeClass">		character<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>xp += stat[action-1]<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>xp;
+</pre><pre id="code0" class="unselectable codeClass">		character<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>fl += stat[action-1]<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>fl;
+</pre><pre id="code0" class="unselectable codeClass">		<a href='../Cg0i/Cg0i0.html' target='keyword'>strcpy</a>( character<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>image, stat[action-1]<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>image );
+</pre><pre id="code0" class="unselectable codeClass">		<a href='../Cg1i/Cg1i0.html' target='keyword'>return</a> character;
+</pre>
+<pre id="codeFe" class="unselectable codeClass">Fe	}
+</pre><pre id="code0" class="unselectable codeClass">	 
+</pre><pre id="code0" class="unselectable codeClass">	<font color="green">//<b> 프로그램 시작 </b></font>
 </pre>
 <pre id="code1" class="unselectable codeClass">1	int main() {
-</pre><pre id="code0" class="unselectable codeClass">		int ball=0, cup=0;
-</pre><pre id="code0" class="unselectable codeClass">		 
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 먼저 3개 컵 중에서 하나에 구슬 숨기기 </b></font>
-</pre><pre id="code0" class="unselectable codeClass">		<font color='red' title="매번 다른 패턴으로 임의값을 생성하도록 초기값을 설정하는 함수">srand</font>( <font color='red' title="시간(초) 정보를 가져오는 함수">time</font>( NULL ) );
+</pre><pre id="code0" class="unselectable codeClass">		int action = 1;
 </pre>
-<pre id="code2" class="unselectable codeClass">2		ball = <font color='red' title="0 ~ 32,767 사이의 정수 중 임의의 수 하나를 반환하는 함수">rand</font>() <font color='red' title="나머지 연산자">%</font> 3 + 1;
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">// 디버깅 모드에서는 구슬 위치를 공개</font>
-</pre>
-<pre id="code3" class="unselectable codeClass">3		#<font color='red' title="매크로이름을 이미 정의했으면 지정 영역을 컴파일">ifdef</font> DEBUG
-</pre>
-<pre id="code4" class="unselectable codeClass">4		printf("\033[8;1f [DEBUG] 구슬 위치 %d \033[1;1f", ball);
-</pre>
-<pre id="code5" class="unselectable codeClass">5		#<font color='red' title="매크로이름 관련 지정 영역의 끝을 의미">endif</font>
-</pre><pre id="code0" class="unselectable codeClass">		 
-</pre><pre id="code0" class="unselectable codeClass">		printf("  ___    ___    ___  \n");
-</pre><pre id="code0" class="unselectable codeClass">		printf(" |   |  |   |  |   | \n");
-</pre><pre id="code0" class="unselectable codeClass">		printf(" | 1 |  | 2 |  | 3 | \n\n\n\n");
+<pre id="code2" class="unselectable codeClass">2		Stat character = { 0, 0, 0, "" };
 </pre><pre id="code0" class="unselectable codeClass">	 
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 사용자에게 구슬을 숨긴 컵 번호 입력 받기  </b></font>
-</pre><pre id="code0" class="unselectable codeClass">		printf(" 1, 2, 3 중에서 구슬[O]을 숨긴 컵을 찾으세요 : ");
 </pre>
-<pre id="code6" class="unselectable codeClass">6		scanf( "%d", &cup );
-</pre><pre id="code0" class="unselectable codeClass">			 
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 구슬 찾기 결과 출력 </b></font>
-</pre><pre id="code0" class="unselectable codeClass">		printf(" \033[4;%dfO\n \033[5;%df", ball*7-3, cup*7-5 );
+<pre id="code3" class="unselectable codeClass">3		<a href='../Cf7i/Cf7i0.html' target='keyword'>do</a> {
+</pre><pre id="code0" class="unselectable codeClass">			<font color="green">//<b> 먼저 캐릭터 키운 결과 출력 </b></font>
 </pre>
-<pre id="code7" class="unselectable codeClass">7		( cup <font color='red' title="두 값이 같은지 비교하는 등가연산자">==</font> ball ) <font color='red' title="삼항연산자에서 조건식이 참인지 거짓인지 확인하는 기호">?</font> printf("찾았다!\n") : printf("놓쳤다!\n");
+<pre id="code4" class="unselectable codeClass">4			character =
+</pre>
+<pre id="code5" class="unselectable codeClass">5			            raise( character, action );
+</pre><pre id="code0" class="unselectable codeClass">			printf( " \033[1;1f%s\n체력%2d  경험%2d  기분%2d\n\n", character<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>image, character<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>hp, character<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>xp, character<a href='../Cg5i/Cg5i0.html#2' target='keyword'>.</a>fl );
+</pre><pre id="code0" class="unselectable codeClass">	 
+</pre><pre id="code0" class="unselectable codeClass">			<font color="green">//<b> 새로운 입력 받아서 게임 계속 진행</b></font>
+</pre><pre id="code0" class="unselectable codeClass">			printf( "잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: " );
+</pre>
+<pre id="code6" class="unselectable codeClass">6			scanf( "%d", &action);
+</pre><pre id="code0" class="unselectable codeClass">	 
+</pre>
+<pre id="code7" class="unselectable codeClass">7		} <a href='../Cf7i/Cf7i0.html' target='keyword'>while</a>( ( action <a href='../Cf4i/Cf4i0.html#2' target='keyword'>==</a> 1 ) <a href='../Cf4i/Cf4i0.html#2' target='keyword'>||</a> ( action <a href='../Cf4i/Cf4i0.html#2' target='keyword'>==</a> 2 ) <a href='../Cf4i/Cf4i0.html#2' target='keyword'>||</a> ( action <a href='../Cf4i/Cf4i0.html#2' target='keyword'>==</a> 3 ) <a href='../Cf4i/Cf4i0.html#2' target='keyword'>||</a> ( action <a href='../Cf4i/Cf4i0.html#2' target='keyword'>==</a> 4 ) );
 </pre><pre id="code0" class="unselectable codeClass">	 
 </pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 프로그램 종료 </b></font>
 </pre>
-<pre id="code8" class="unselectable codeClass">8		return 0;
+<pre id="code8" class="unselectable codeClass">8		<a href='../Cg1i/Cg1i0.html' target='keyword'>return</a> 0;
 </pre><pre id="code0" class="unselectable codeClass">	}
-</pre></div>	 	 				<br><h4>키워드 설명</h4> 				<pre id = "sP3d3" style='white-space:normal;'></pre> 			 				<h4>실행 순서</h4> 				<pre id = "sP3d4" style='white-space:normal; width:800px;'> </pre> 				<pre style='white-space:normal;'> 					※ 실행순서 및 메모리상태는 A키(이전) 및 D키(다음)를 눌러도 확인할 수 있습니다  				</pre> 				<br><br> 			</div> 			<div id = "floatingBox"> 				<pre id = "outputBox" class ="outputBox" style = "color:White;height:140px;width:444px;padding:10px;margin:0px;"></pre>  				<div id = "intermediateResult"> 					<img id = "sP3d7"> 					<table style = "border-spacing:0px;margin:0px;table-layout:auto;"> 						<tbody id = "sP3d8"></tbody> 					</table> 				</div> 			</div> 		</div> 	</body> </html> 
+</pre></div>	 	 				<br><h4>실행 순서</h4> 				<pre id = "sP3d4" style='white-space:normal; width:800px;'> </pre> 				<pre style='white-space:normal;'> 					※ 실행순서 및 메모리상태는 A키(이전) 및 D키(다음)를 눌러도 확인할 수 있습니다  				</pre> 				<br><br><br><br><br><br><br><br> &nbsp;  			</div> 			<div id = "floatingBox" style = "top:200px;left:900px;margin:0px;padding:0px;"> 				<pre id = "outputBox" class ="outputBox" style = "color:White;height:260px;width:628px;padding:10px;margin:0px;"></pre>  				<div id = "intermediateResult"> 					<img id = "sP3d7"> 					<table style = "border-spacing:0px;margin:0px;table-layout:auto;"> 						<tbody id = "sP3d8"></tbody> 					</table> 				</div> 			</div> 		</div> 	</body> </html> 
