--- a/Cg5i4a.html
+++ b/Cg5i4a.html
@@ -1,22 +1,68 @@
-<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script> 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<script type="text/javascript" src="../functions.js"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script> 			const sP3d10 = [ [ "4", "프로그램 종료" ], [ "1", "-먼저 3개 컵 중에서 하나에 구슬 숨기기" ], [ "3", "-구슬 찾기 결과 출력" ], [ "2", "-사용자에게 구슬을 숨긴 컵 번호 입력 받기" ], [ "0", "프로그램시작" ], 							]; 		</script> 	</head> 	<body onload='sP3f3();' oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><ul><li><a href='Cg5i4.html'>코드읽기</a></li><li><a href='Cg5i4a.html'>알고리즘</a></li><li><a href='Cg5i4k.html'>키워드</a></li><li><a href='Cg5i4b.html'>빈칸채우기</a></li><li><a href='Cg5i4s.html'>실행순서</a></li><li><a href='Cg5i4m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/ThreeCupGame.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>구슬을 3개 컵 중에서 어디에 숨겼는지 사용자가 맞추는 문제입니다 이를 해결하는 방법을 아래 참고자료에서 한줄씩 복붙해서 설명하세요 </pre> 				<pre class='selectable'>  ___    ___    ___  
- |   |  |   |  |   | 
- | 1 |  | 2 |  | 3 | 
-   O 
- 찾았다!
- 1, 2, 3 중에서 구슬[O]을 숨긴 컵을 찾으세요 : <b><font color='red'>1</font></b>
- [DEBUG] 구슬 위치 1
-</pre><br><pre class='selectable'>  ___    ___    ___  
- |   |  |   |  |   | 
- | 1 |  | 2 |  | 3 | 
-                 O 
-        놓쳤다!
- 1, 2, 3 중에서 구슬[O]을 숨긴 컵을 찾으세요 : <b><font color='red'>2</font></b>
- [DEBUG] 구슬 위치 3
-</pre><br><pre class='selectable'>  ___    ___    ___  
- |   |  |   |  |   | 
- | 1 |  | 2 |  | 3 | 
-          O 
-               놓쳤다!
- 1, 2, 3 중에서 구슬[O]을 숨긴 컵을 찾으세요 : <b><font color='red'>3</font></b>
- [DEBUG] 구슬 위치 2
-</pre><br>  	 				<h4>알고리즘</h4> 				<div id="card" style='width:1200px;'> 	  				<div id="cardSlots"></div> 	  				<div id="cardPile"></div> 				</div> 			</div> 		</div> 	</body>  </html>  
+<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script> 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<script type="text/javascript" src="../functions.js"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script> 			const sP3d10 = [ [ "4", "2) 캐릭터 키우기 함수" ], [ "0", "1) 프로그램 시작" ], [ "2", "1) -새로운 입력 받아서 게임 계속 진행" ], [ "3", "1) 프로그램 종료" ], [ "1", "1) -먼저 캐릭터 키운 결과 출력" ], 							]; 		</script> 	</head> 	<body onload='sP3f3();' oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Cf0i/Cf0i0.html'>C 프로그래밍 시작</a></li><li><a href='../Cf1i/Cf1i0.html'>출력</a></li><li><a href='../Cf2i/Cf2i0.html'>입력</a></li><li><a href='../Cf3i/Cf3i0.html'>변수</a></li><li><a href='../Cf4i/Cf4i0.html'>연산자</a></li><li><a href='../Cf5i/Cf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf6i/Cf6i0.html'>선택문(if)</a></li><li><a href='../Cf7i/Cf7i0.html'>반복문(while)</a></li><li><a href='../Cf8i/Cf8i0.html'>반복문(for)</a></li><li><a href='../Cf9i/Cf9i0.html'>배열</a></li><li><a href='../Cg0i/Cg0i0.html'>문자열</a></li><li><a href='../Cg1i/Cg1i0.html'>함수</a></li><li><a href='../Cg2i/Cg2i0.html'>재귀함수</a></li><li><a href='../Cg3i/Cg3i0.html'>포인터</a></li><li><a href='../Cg4i/Cg4i0.html'>파일입출력</a></li><li><a href='../Cg5i/Cg5i0.html'>열거형/구조체/동적할당</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i2.html'>학생 정보</a></li><li><a href='../Cg5i/Cg5i3.html'>날짜 및 시간</a></li><li><a href='../Cg5i/Cg5i4.html'>캐릭터 키우기</a></li><ul><li><a href='Cg5i4.html'>코드읽기</a></li><li><a href='Cg5i4a.html'>알고리즘</a></li><li><a href='Cg5i4k.html'>키워드</a></li><li><a href='Cg5i4b.html'>빈칸채우기</a></li><li><a href='Cg5i4s.html'>실행순서</a></li><li><a href='Cg5i4m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/CharacterRaising.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i5.html'>우리반 평균 점수</a></li></ul><li><a href='../Cg6i/Cg6i0.html'>함수 자료 전달</a></li><li><a href='../Cg7i/Cg7i0.html'>전처리/파일분할</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>잠자기, 노래, 산책, 먹기를 선택해서 캐릭터의 능력치을 키우는 문제입니다 이를 해결하는 방법을 아래 참고자료에서 한줄씩 복붙해서 설명하세요 </pre> 				<pre class='selectable'><div style='font-family:monospace;line-height:1;'>  _
+_| |_
+(-_-)
+(   )            
+	
+체력 2  경험 1  기분 2
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>2</span></b>
+  _
+_| |_
+(^O^) ~♩~~♪~♬~♩~
+(   )            
+	
+체력 3  경험 4  기분 6
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>5</span></b>
+</div> 
+</pre><br><pre class='selectable'><div style='font-family:monospace;line-height:1;'>  _
+_| |_
+(-_-)
+(   )            
+	
+체력 2  경험 1  기분 2
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>1</span></b>
+  _
+_| |_
+(-_-)            
+(   )            
+	
+체력 4  경험 2  기분 4
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>2</span></b>
+  _	
+_| |_
+(^O^) ~♩~~♪~♬~♩~ 
+(   )            
+	
+체력 5  경험 5  기분 8
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>3</span></b>
+  _
+_| |_
+(O.O)   O   O     
+(   )<span style='font-family:Courier;'> \|/\|/   </span> 
+	
+체력 9  경험 9  기분11
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>4</span></b>
+  _
+_| |_
+(@O@)            
+(   ) |_|>       
+	
+체력12  경험11  기분12
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>5</span></b>
+</div> 
+</pre><br><pre class='selectable'><div style='font-family:monospace;line-height:1;'>  _
+_| |_
+(-_-)
+(   )            
+	
+체력 2  경험 1  기분 2
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>5</span></b>
+</div> 
+</pre><br>  	 				<h4>알고리즘</h4> 				<div id="card" style='width:1200px;'> 	  				<div id="cardSlots"></div> 	  				<div id="cardPile"></div> 				</div> 				<br><br><br><br><br><br><br><br> &nbsp;  			</div> 		</div> 	</body>  </html>  
