--- a/Cg5i4b.html
+++ b/Cg5i4b.html
@@ -1,48 +1,106 @@
-<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = [ [ "include","#include" ], [ "stdio.h" ], [ "include","#include" ], [ "stdlib.h" ], [ "include","#include" ], [ "time.h" ], [ "define","#define" ], [ "srand","srand()" ], [ "time","time()" ], [ "rand","rand()" ], [ "%" ], [ "ifdef","#ifdef" ], [ "endif","#endif" ], [ "==" ], [ "?" ], 							]; 		</script> 	</head> 	<body oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><ul><li><a href='Cg5i4.html'>코드읽기</a></li><li><a href='Cg5i4a.html'>알고리즘</a></li><li><a href='Cg5i4k.html'>키워드</a></li><li><a href='Cg5i4b.html'>빈칸채우기</a></li><li><a href='Cg5i4s.html'>실행순서</a></li><li><a href='Cg5i4m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/ThreeCupGame.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>구슬을 3개 컵 중에서 어디에 숨겼는지 사용자가 맞추는 문제입니다 이를 해결하는 다음 프로그램에 대해 빈칸을 채우세요 </pre> 				<pre class='selectable'>  ___    ___    ___  
- |   |  |   |  |   | 
- | 1 |  | 2 |  | 3 | 
-   O 
- 찾았다!
- 1, 2, 3 중에서 구슬[O]을 숨긴 컵을 찾으세요 : <b><font color='red'>1</font></b>
- [DEBUG] 구슬 위치 1
-</pre><br><pre class='selectable'>  ___    ___    ___  
- |   |  |   |  |   | 
- | 1 |  | 2 |  | 3 | 
-                 O 
-        놓쳤다!
- 1, 2, 3 중에서 구슬[O]을 숨긴 컵을 찾으세요 : <b><font color='red'>2</font></b>
- [DEBUG] 구슬 위치 3
-</pre><br><pre class='selectable'>  ___    ___    ___  
- |   |  |   |  |   | 
- | 1 |  | 2 |  | 3 | 
-          O 
-               놓쳤다!
- 1, 2, 3 중에서 구슬[O]을 숨긴 컵을 찾으세요 : <b><font color='red'>3</font></b>
- [DEBUG] 구슬 위치 2
-</pre><br>  	  				<h4>코드 빈칸 채우기</h4> 				<pre style='white-space:pre;border:1px'>#<input id='blank0' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(0)'> <<input id='blank1' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(1)'>> 			 
-#<input id='blank2' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(2)'> <<input id='blank3' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(3)'>>				 
-#<input id='blank4' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(4)'> <<input id='blank5' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(5)'>>				 
+<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = [ [ "typedef" ], [ "struct" ], [ "Stat" ], [ "Stat" ], [ "Stat" ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "." ], [ "strcpy","strcpy()" ], [ "." ], [ "." ], [ "return","return;" ], [ "Stat" ], [ "do" ], [ "." ], [ "." ], [ "." ], [ "." ], [ "while","while()" ], [ "==" ], [ "||" ], [ "==" ], [ "||" ], [ "==" ], [ "||" ], [ "==" ], [ "return","return;" ], 							]; 		</script> 	</head> 	<body oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Cf0i/Cf0i0.html'>C 프로그래밍 시작</a></li><li><a href='../Cf1i/Cf1i0.html'>출력</a></li><li><a href='../Cf2i/Cf2i0.html'>입력</a></li><li><a href='../Cf3i/Cf3i0.html'>변수</a></li><li><a href='../Cf4i/Cf4i0.html'>연산자</a></li><li><a href='../Cf5i/Cf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf6i/Cf6i0.html'>선택문(if)</a></li><li><a href='../Cf7i/Cf7i0.html'>반복문(while)</a></li><li><a href='../Cf8i/Cf8i0.html'>반복문(for)</a></li><li><a href='../Cf9i/Cf9i0.html'>배열</a></li><li><a href='../Cg0i/Cg0i0.html'>문자열</a></li><li><a href='../Cg1i/Cg1i0.html'>함수</a></li><li><a href='../Cg2i/Cg2i0.html'>재귀함수</a></li><li><a href='../Cg3i/Cg3i0.html'>포인터</a></li><li><a href='../Cg4i/Cg4i0.html'>파일입출력</a></li><li><a href='../Cg5i/Cg5i0.html'>열거형/구조체/동적할당</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i2.html'>학생 정보</a></li><li><a href='../Cg5i/Cg5i3.html'>날짜 및 시간</a></li><li><a href='../Cg5i/Cg5i4.html'>캐릭터 키우기</a></li><ul><li><a href='Cg5i4.html'>코드읽기</a></li><li><a href='Cg5i4a.html'>알고리즘</a></li><li><a href='Cg5i4k.html'>키워드</a></li><li><a href='Cg5i4b.html'>빈칸채우기</a></li><li><a href='Cg5i4s.html'>실행순서</a></li><li><a href='Cg5i4m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/CharacterRaising.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i5.html'>우리반 평균 점수</a></li></ul><li><a href='../Cg6i/Cg6i0.html'>함수 자료 전달</a></li><li><a href='../Cg7i/Cg7i0.html'>전처리/파일분할</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>잠자기, 노래, 산책, 먹기를 선택해서 캐릭터의 능력치을 키우는 문제입니다 이를 해결하는 다음 프로그램에 대해 빈칸을 채우세요 </pre> 				<pre class='selectable'><div style='font-family:monospace;line-height:1;'>  _
+_| |_
+(-_-)
+(   )            
+	
+체력 2  경험 1  기분 2
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>2</span></b>
+  _
+_| |_
+(^O^) ~♩~~♪~♬~♩~
+(   )            
+	
+체력 3  경험 4  기분 6
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>5</span></b>
+</div> 
+</pre><br><pre class='selectable'><div style='font-family:monospace;line-height:1;'>  _
+_| |_
+(-_-)
+(   )            
+	
+체력 2  경험 1  기분 2
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>1</span></b>
+  _
+_| |_
+(-_-)            
+(   )            
+	
+체력 4  경험 2  기분 4
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>2</span></b>
+  _	
+_| |_
+(^O^) ~♩~~♪~♬~♩~ 
+(   )            
+	
+체력 5  경험 5  기분 8
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>3</span></b>
+  _
+_| |_
+(O.O)   O   O     
+(   )<span style='font-family:Courier;'> \|/\|/   </span> 
+	
+체력 9  경험 9  기분11
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>4</span></b>
+  _
+_| |_
+(@O@)            
+(   ) |_|>       
+	
+체력12  경험11  기분12
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>5</span></b>
+</div> 
+</pre><br><pre class='selectable'><div style='font-family:monospace;line-height:1;'>  _
+_| |_
+(-_-)
+(   )            
+	
+체력 2  경험 1  기분 2
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>5</span></b>
+</div> 
+</pre><br>  	  				<h4>코드 빈칸 채우기</h4> 				<pre style='white-space:pre;border:1px'>#include &lt;stdio.h&gt; 
+#include &lt;string.h&gt; 
  
-#<input id='blank6' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(6)'> DEBUG 
+<input id='blank0' type='text' required minlength='1' maxlength='30' size='7' onchange='sP3f6(0)'> <input id='blank1' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(1)'> { 							 
+	int hp; 
+	int xp; 
+	int fl; 
+	char image[64]; 
+} Stat; 
+ 
+<input id='blank2' type='text' required minlength='1' maxlength='30' size='4' onchange='sP3f6(2)'> raise( <input id='blank3' type='text' required minlength='1' maxlength='30' size='4' onchange='sP3f6(3)'> character, int action ) { 
+	<input id='blank4' type='text' required minlength='1' maxlength='30' size='4' onchange='sP3f6(4)'> stat[4] = { { 2, 1, 2, "  _\n_| |_\n(-_-)            \n(   )            \n" }, 
+                        { 1, 3, 4, "  _\n_| |_\n(^O^) ~♩~~♪~♬~♩~\n(   )            \n",  }, 
+                        { 4, 4, 3, "  _\n_| |_\n(O.O)  O   O     \n(   ) \\|/ \\|/    \n" }, 
+                        { 3, 2, 1, "  _\n_| |_\n(@O@)            \n(   ) |_|&gt;       \n" } }; 
+ 
+	character<input id='blank5' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(5)'>hp += stat[action-1]<input id='blank6' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(6)'>hp; 
+	character<input id='blank7' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(7)'>xp += stat[action-1]<input id='blank8' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(8)'>xp; 
+	character<input id='blank9' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(9)'>fl += stat[action-1]<input id='blank10' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(10)'>fl; 
+	<input id='blank11' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(11)'>( character<input id='blank12' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(12)'>image, stat[action-1]<input id='blank13' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(13)'>image ); 
+	<input id='blank14' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(14)'> character; 
+} 
  
 int main() { 
-	int ball=0, cup=0; 
-	 
-	<input id='blank7' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(7)'>( <input id='blank8' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(8)'>( NULL ) ); 
-	ball = <input id='blank9' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(9)'>() <input id='blank10' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(10)'> 3 + 1; 
-	#<input id='blank11' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(11)'> DEBUG 
-	printf("\033[8;1f [DEBUG] 구슬 위치 %d \033[1;1f", ball); 
-	#<input id='blank12' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(12)'>  
-	 
-	printf("  ___    ___    ___  \n"); 
-	printf(" |   |  |   |  |   | \n"); 
-	printf(" | 1 |  | 2 |  | 3 | \n\n\n\n"); 
+	int action = 1; 
+	<input id='blank15' type='text' required minlength='1' maxlength='30' size='4' onchange='sP3f6(15)'> character = { 0, 0, 0, "" }; 
  
-	printf(" 1, 2, 3 중에서 구슬[O]을 숨긴 컵을 찾으세요 : "); 
-	scanf( "%d", &cup ); 
-		 
-	printf(" \033[4;%dfO\n \033[5;%df", ball*7-3, cup*7-5 ); 
-	( cup <input id='blank13' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(13)'> ball ) <input id='blank14' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(14)'> printf("찾았다!\n") : printf("놓쳤다!\n"); 
+	<input id='blank16' type='text' required minlength='1' maxlength='30' size='2' onchange='sP3f6(16)'> { 
+		character =  
+		            raise( character, action ); 
+		printf( " \033[1;1f%s\n체력%2d  경험%2d  기분%2d\n\n", character<input id='blank17' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(17)'>image, character<input id='blank18' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(18)'>hp, character<input id='blank19' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(19)'>xp, character<input id='blank20' type='text' required minlength='1' maxlength='30' size='1' onchange='sP3f6(20)'>fl ); 
  
-	return 0; 
-} 	 			</pre> 			</div> 		</div> 	</body> </html> 
+		printf( "잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: " ); 
+		scanf( "%d", &action); 
+ 
+	} <input id='blank21' type='text' required minlength='1' maxlength='30' size='5' onchange='sP3f6(21)'>( ( action <input id='blank22' type='text' required minlength='1' maxlength='30' size='2' onchange='sP3f6(22)'> 1 ) <input id='blank23' type='text' required minlength='1' maxlength='30' size='2' onchange='sP3f6(23)'> ( action <input id='blank24' type='text' required minlength='1' maxlength='30' size='2' onchange='sP3f6(24)'> 2 ) <input id='blank25' type='text' required minlength='1' maxlength='30' size='2' onchange='sP3f6(25)'> ( action <input id='blank26' type='text' required minlength='1' maxlength='30' size='2' onchange='sP3f6(26)'> 3 ) <input id='blank27' type='text' required minlength='1' maxlength='30' size='2' onchange='sP3f6(27)'> ( action <input id='blank28' type='text' required minlength='1' maxlength='30' size='2' onchange='sP3f6(28)'> 4 ) ); 
+ 
+	<input id='blank29' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(29)'> 0; 
+} 	 			</pre> 				<br><br><br><br><br><br><br><br> &nbsp;  			</div> 		</div> 	</body> </html> 
