--- a/Cg5i4s.html
+++ b/Cg5i4s.html
@@ -1,36 +1,58 @@
-<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			var sP3d10 = "1 2 3 4 5 6 7 8"; 		</script> 	</head> 	<body oncontextmenu="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><ul><li><a href='Cg5i4.html'>코드읽기</a></li><li><a href='Cg5i4a.html'>알고리즘</a></li><li><a href='Cg5i4k.html'>키워드</a></li><li><a href='Cg5i4b.html'>빈칸채우기</a></li><li><a href='Cg5i4s.html'>실행순서</a></li><li><a href='Cg5i4m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/ThreeCupGame.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>구슬을 3개 컵 중에서 어디에 숨겼는지 사용자가 맞추는 문제입니다 실행순서를 클릭하세요 </pre> 				<pre class='selectable'>  ___    ___    ___  
- |   |  |   |  |   | 
- | 1 |  | 2 |  | 3 | 
-   O 
- 찾았다!
- 1, 2, 3 중에서 구슬[O]을 숨긴 컵을 찾으세요 : <b><font color='red'>1</font></b>
- [DEBUG] 구슬 위치 1
+<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = "1 2 3 5 Fb Fe 4 6 7 3 5 Fb Fe 4 6 7 8"; 		</script> 	</head> 	<body oncontextmenu="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Cf0i/Cf0i0.html'>C 프로그래밍 시작</a></li><li><a href='../Cf1i/Cf1i0.html'>출력</a></li><li><a href='../Cf2i/Cf2i0.html'>입력</a></li><li><a href='../Cf3i/Cf3i0.html'>변수</a></li><li><a href='../Cf4i/Cf4i0.html'>연산자</a></li><li><a href='../Cf5i/Cf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf6i/Cf6i0.html'>선택문(if)</a></li><li><a href='../Cf7i/Cf7i0.html'>반복문(while)</a></li><li><a href='../Cf8i/Cf8i0.html'>반복문(for)</a></li><li><a href='../Cf9i/Cf9i0.html'>배열</a></li><li><a href='../Cg0i/Cg0i0.html'>문자열</a></li><li><a href='../Cg1i/Cg1i0.html'>함수</a></li><li><a href='../Cg2i/Cg2i0.html'>재귀함수</a></li><li><a href='../Cg3i/Cg3i0.html'>포인터</a></li><li><a href='../Cg4i/Cg4i0.html'>파일입출력</a></li><li><a href='../Cg5i/Cg5i0.html'>열거형/구조체/동적할당</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i2.html'>학생 정보</a></li><li><a href='../Cg5i/Cg5i3.html'>날짜 및 시간</a></li><li><a href='../Cg5i/Cg5i4.html'>캐릭터 키우기</a></li><ul><li><a href='Cg5i4.html'>코드읽기</a></li><li><a href='Cg5i4a.html'>알고리즘</a></li><li><a href='Cg5i4k.html'>키워드</a></li><li><a href='Cg5i4b.html'>빈칸채우기</a></li><li><a href='Cg5i4s.html'>실행순서</a></li><li><a href='Cg5i4m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/CharacterRaising.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i5.html'>우리반 평균 점수</a></li></ul><li><a href='../Cg6i/Cg6i0.html'>함수 자료 전달</a></li><li><a href='../Cg7i/Cg7i0.html'>전처리/파일분할</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>잠자기, 노래, 산책, 먹기를 선택해서 캐릭터의 능력치을 키우는 문제입니다 실행순서를 클릭하세요 </pre> 				<pre class='selectable'><div style='font-family:monospace;line-height:1;'>  _
+_| |_
+(-_-)
+(   )            
+	
+체력 2  경험 1  기분 2
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>2</span></b>
+  _
+_| |_
+(^O^) ~♩~~♪~♬~♩~
+(   )            
+	
+체력 3  경험 4  기분 6
+	
+잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: <b><span style='color:rgb(255,0,0);'>5</span></b>
+</div> 
 </pre><br>  	 				<h4>프로그램 코드</h4> 				<pre></pre><pre id="code0" class="unselectable codeClass">	#include &lt;stdio.h&gt;
-</pre><pre id="code0" class="unselectable codeClass">	#include &lt;stdlib.h&gt;
-</pre><pre id="code0" class="unselectable codeClass">	#include &lt;time.h&gt;
+</pre><pre id="code0" class="unselectable codeClass">	#include &lt;string.h&gt;
 
-</pre><pre id="code0" class="unselectable codeClass">	#define DEBUG
+</pre><pre id="code0" class="unselectable codeClass">	typedef struct {
+</pre><pre id="code0" class="unselectable codeClass">		int hp;
+</pre><pre id="code0" class="unselectable codeClass">		int xp;
+</pre><pre id="code0" class="unselectable codeClass">		int fl;
+</pre><pre id="code0" class="unselectable codeClass">		char image[64];
+</pre><pre id="code0" class="unselectable codeClass">	} Stat;
+
+</pre><pre id="codeFb" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('Fb')">Fb	Stat raise( Stat character, int action ) {
+</pre><pre id="code0" class="unselectable codeClass">		Stat stat[4] = { { 2, 1, 2, "  _\n_| |_\n(-_-)            \n(   )            \n" },
+</pre><pre id="code0" class="unselectable codeClass">	                        { 1, 3, 4, "  _\n_| |_\n(^O^) ~♩~~♪~♬~♩~\n(   )            \n",  },
+</pre><pre id="code0" class="unselectable codeClass">	                        { 4, 4, 3, "  _\n_| |_\n(O.O)  O   O     \n(   ) \\|/ \\|/    \n" },
+</pre><pre id="code0" class="unselectable codeClass">	                        { 3, 2, 1, "  _\n_| |_\n(@O@)            \n(   ) |_|&gt;       \n" } };
+
+</pre><pre id="code0" class="unselectable codeClass">		character.hp += stat[action-1].hp;
+</pre><pre id="code0" class="unselectable codeClass">		character.xp += stat[action-1].xp;
+</pre><pre id="code0" class="unselectable codeClass">		character.fl += stat[action-1].fl;
+</pre><pre id="code0" class="unselectable codeClass">		strcpy( character.image, stat[action-1].image );
+</pre><pre id="code0" class="unselectable codeClass">		return character;
+</pre><pre id="codeFe" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('Fe')">Fe	}
 
 </pre><pre id="code1" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('1')">1	int main() {
-</pre><pre id="code0" class="unselectable codeClass">		int ball=0, cup=0;
-</pre><pre id="code0" class="unselectable codeClass">		
-</pre><pre id="code0" class="unselectable codeClass">		srand( time( NULL ) );
-</pre><pre id="code2" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('2')">2		ball = rand() % 3 + 1;
-</pre><pre id="code3" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('3')">3		#ifdef DEBUG
-</pre><pre id="code4" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('4')">4		printf("\033[8;1f [DEBUG] 구슬 위치 %d \033[1;1f", ball);
-</pre><pre id="code5" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('5')">5		#endif
-</pre><pre id="code0" class="unselectable codeClass">		
-</pre><pre id="code0" class="unselectable codeClass">		printf("  ___    ___    ___  \n");
-</pre><pre id="code0" class="unselectable codeClass">		printf(" |   |  |   |  |   | \n");
-</pre><pre id="code0" class="unselectable codeClass">		printf(" | 1 |  | 2 |  | 3 | \n\n\n\n");
+</pre><pre id="code0" class="unselectable codeClass">		int action = 1;
+</pre><pre id="code2" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('2')">2		Stat character = { 0, 0, 0, "" };
 
-</pre><pre id="code0" class="unselectable codeClass">		printf(" 1, 2, 3 중에서 구슬[O]을 숨긴 컵을 찾으세요 : ");
-</pre><pre id="code6" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('6')">6		scanf( "%d", &cup );
-</pre><pre id="code0" class="unselectable codeClass">			
-</pre><pre id="code0" class="unselectable codeClass">		printf(" \033[4;%dfO\n \033[5;%df", ball*7-3, cup*7-5 );
-</pre><pre id="code7" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('7')">7		( cup == ball ) ? printf("찾았다!\n") : printf("놓쳤다!\n");
+</pre><pre id="code3" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('3')">3		do {
+</pre><pre id="code4" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('4')">4			character =
+</pre><pre id="code5" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('5')">5			            raise( character, action );
+</pre><pre id="code0" class="unselectable codeClass">			printf( " \033[1;1f%s\n체력%2d  경험%2d  기분%2d\n\n", character.image, character.hp, character.xp, character.fl );
+
+</pre><pre id="code0" class="unselectable codeClass">			printf( "잠자기(1), 노래(2), 산책(3), 먹기(4), 종료(5) 중 하나를 숫자로 입력하세요: " );
+</pre><pre id="code6" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('6')">6			scanf( "%d", &action);
+
+</pre><pre id="code7" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('7')">7		} while( ( action == 1 ) || ( action == 2 ) || ( action == 3 ) || ( action == 4 ) );
 
 </pre><pre id="code8" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('8')">8		return 0;
 </pre><pre id="code0" class="unselectable codeClass">	}
 </pre>
-</pre> 			</div> 			<div id = "floatingBox"> 				<b>실행 순서</b> 				<pre id = "sP3d4" style='white-space:normal; word-wrap:break-word; width:150px;'></pre> 			</div> 		</div> 	</body> </html>   
+</pre> 				<br><br><br><br><br><br><br><br> &nbsp;  			</div> 			<div id = "floatingBox"> 				<b>실행 순서</b> 				<pre id = "sP3d4" style='white-space:normal; word-wrap:break-word; width:150px;'></pre> 			</div> 		</div> 	</body> </html>   
